add copcopyright full text, + add new full product 1-14 str. + img in str dezign

--- a/app/404.html
+++ b/app/404.html
@@ -291,7 +291,7 @@
           <p class="mistake__subtitle">
             СТРАНИЦА НАХОДИТСЯ В РАЗРАБОТКЕ
             <br>
-            ИЛИ НЕ СУЩЕСТВУЕТ
+            ИЛИ НЕ СУЩЕСТВУЕТ.
           </p>
 
           <div class="global__inner-btn">
