--- a/app/about.html
+++ b/app/about.html
@@ -306,15 +306,15 @@
                 “В течении прозрачных отношений”
               </h1>
               <p class="start__text text">
-                В наших бассейнах вода чистая и прозрачная, как и наше отношение к людям.
+               В наших бассейнах вода чистая и прозрачная, как и наше отношение к людям.
                 <br>
                 <br>
-                Потому слоган предприятия - это не фигура речи, а обязательное условие в нашей работе.
+              Потому слоган предприятия - это не фигура речи, а обязательное условие в нашей работе.
                 <br>
                 Специалисты нашей компании ответственно относятся ко всем заказчикам и заинтересованы в предоставлении
                 качественных услуг.
                 <br>
-                Это отношение принципиально и не зависит от стоимости и объема работ.
+              Это отношение принципиально и не зависит от стоимости и объема работ.
 
               </p>
             </div>
@@ -339,8 +339,8 @@
               </div>
               <p class="about__item-text text">
                 «Я уверен, что если полностью вкладывать в свое дело знания, опыт, ответственность и честолюбие, то жить
-                станет легче и свободней потому что времени на «вечные переделки» тратить будет не нужно. Время
-                высвободится для творчества»
+                станет легче и свободней, потому что времени на «вечные переделки» тратить будет не нужно. Время
+                высвободится для творчества.»
               </p>
             </div>
 
@@ -359,8 +359,8 @@
                 </div>
               </div>
               <p class="about__item-text text">
-                «Самое большое удовлетворение испытываешь, когда видишь как то, что было вначале на бумаге и в эскизах,
-                начинает реализовываться материально и затем превращается в классный продукт»
+                «Самое большое удовлетворение испытываешь, когда видишь, как то, что было на бумаге и в эскизах,
+                начинает реализовываться в материале и затем превращается в классный продукт.»
               </p>
             </div>
             
@@ -384,28 +384,28 @@
               <div class="number">1.</div>
               <p class="water__list-text">
                 Помогаем
-                <span class="blue">воплощать ваши мечты</span>
-                и идеи в жизнь
+                <span class="blue">воплощать Ваши мечты</span>
+                и идеи в жизнь.
               </p>
             </li>
             <li class="water__list">
               <div class="number">2.</div>
               <p class="water__list-text">
                 <span class="blue">Гордимся</span>
-                каждым выполненным проектом
+                каждым выполненным проектом.
               </p>
             </li>
             <li class="water__list">
               <div class="number">3.</div>
               <p class="water__list-text">Сосредоточены на
                 <span class="blue">качестве выполняемых работ</span>, а не
-                на выполнении плана продаж
+                на выполнении плана продаж.
               </p>
             </li>
             <li class="water__list">
               <div class="number">4.</div>
               <p class="water__list-text">Нашим специалистам <span class="blue">всё по плечу</span>. Если взялись за
-                работу - выполним
+                работу - выполним.
               </p>
             </li>
             <li class="water__list">
@@ -414,20 +414,20 @@
                 Индивидуально и
                 <span class="blue">ответственно</span>
                 подходим к каждому
-                заказчику
+                заказчику.
               </p>
             </li>
             <li class="water__list">
               <div class="number">6.</div>
               <p class="water__list-text">
-                Начинаем и заканчиваем объекты в <span class="blue">оговоренные сроки</span>, с соблюдением всех пожеланий заказчика
+                Начинаем и заканчиваем объекты в <span class="blue">оговоренные сроки</span>, с соблюдением всех пожеланий заказчика.
               </p>
             </li>
             <li class="water__list">
               <div class="number">7.</div>
               <p class="water__list-text">
                 <span class="blue">Гибкое ценообразование</span>
-                - один из наших козырей
+                - один из наших козырей.
               </p>
             </li>
           </ul>
