--- a/app/article.html
+++ b/app/article.html
@@ -327,11 +327,9 @@
             <div class="article__info">
               <p class="article__text text">
                 Недавно к нам обратился заказчик – основная проблема разрушение существующего мозаичного покрытия
-                железобетонной чаши.
-                При обследовании чаши были выявлены следующие моменты: <br>
+                железобетонной чаши. При обследовании чаши были выявлены следующие моменты: <br>
                 Бассейн переливного типа, был построен около десяти лет назад, что в общем то, не является значительным
-                сроком для
-                плиточного бассейна.
+                сроком для плиточного бассейна. При обследовании были выявлены следующие «заболевания» чаши:
               </p>
 
             </div>
@@ -340,10 +338,9 @@
             <img class="article__img" src="images/content/article2.jpg"></img>
             <div class="article__info">
               <p class="article__text text">
-                При обследовании были выявлены следующие «заболевания» чаши: <br>
                 За последнее время произошло разрушение мозаичного покрытия примерно на 10% площади. <br>
-                В выпускных отверстиях лотков, в донном сливе скопился белый налет который состоит из затирки и остатков
-                клея размытых водой. <br>
+                В выпускных отверстиях лотков, в донном сливе скопился белый налет, который состоит из затирки и
+                остатков клея, размытых водой. <br>
                 Оставшаяся мозаика имеет слабое сцепление с основанием, происходит поэтапное вымывание затирки и
                 разрушение клеевого слоя. Наибольшая интенсивность данных процессов наблюдается в верхней части бортика
                 чаши.
@@ -358,15 +355,15 @@
             <div class="article__info">
               <p class="article__text text">
                 При простукивании стен отслоения штукатурки не выявлено. Сама конструкция бетонной чаши не имеет следов
-                разрушения или коррозии арматуры, протечек нет. <br>
-                Итак предстоящий объем работ – снятие мозаики, зачистка и выравнивание стен, нанесение нового слоя
+                разрушения или коррозии арматуры, протечек нет.<br>
+                Итак, предстоящий объем работ – снятие мозаики, зачистка и выравнивание стен, нанесение нового слоя
                 гидроизоляции и затем укладка стеклянной мозаики и ее затирка эпоксидными составами. Попутно выполнение
-                реконструкции переливного лотка, в нем в качестве отделочного материала решено применить
-                керамогранитную плитку для уменьшения расхода затирки и облегчения уборки в переливном лотке. <br>
+                реконструкции переливного лотка, в нем в качестве отделочного материала решено применить керамогранитную
+                плитку для уменьшения расхода затирки и облегчения уборки в переливном лотке. <br>
                 Все лицевые части закладных деталей сняли и увезли на очистку и полировку. <br>
                 Самый сложный и пыльный этап – очистка остатков клея. Работа выполняется вручную «болгарками» с
-                алмазными дисками. После мелкого ремонта поверхности выполняется нанесение гидроизоляции. После
-                успешной опрессовки чаши в течение пяти дней двигаемся дальше.
+                алмазными дисками. После мелкого ремонта поверхности выполняется нанесение гидроизоляции. После успешной
+                опрессовки чаши в течение пяти дней двигаемся дальше.
 
               </p>
 
@@ -378,10 +375,10 @@
             <div class="article__info">
               <p class="article__text text">
                 При реконструкции перелива изменилась геометрия лотка и ни одна из существующих решеток не помещалась в
-                нем. Была приобретена решетка Российского производителя большего размера и собственными силами
-                отфрезерована на ЧПУ станке по размерам готового лотка. <br>
-                Самый приятный момент к которому мы шли без малого полтора месяца – все затерто и помыто, нержавейка
-                сияет, решетка уложена, роллер с жалюзи встал наместо. Наливаем воду…
+                нем. Была приобретена решетка российского производителя большего размера и собственными силами
+                отфрезерована на ЧПУ станке по размерам готового лотка.<br>
+                Самый приятный момент, к которому мы шли без малого полтора месяца – все затерто и помыто, нержавейка
+                сияет, решетка уложена, роллер с жалюзи встал на место. Наливаем воду…
 
               </p>
 
@@ -397,9 +394,9 @@
 
 
           <div class="article__inner-btn">
-            <div class="global__btn-contact global-btn main-btn">
+            <a class="global__btn-contact global-btn main-btn" href="news.html">
               все новости
-            </div>
+            </a>
             <div data-modal class="global__btn-contact global-btn main-btn article__btn">
               Получить консультацию
             </div>
