--- a/app/children.html
+++ b/app/children.html
@@ -302,24 +302,23 @@
                   </li>
                   <li class="breadcrumbs__list-item">
                     <div class="breadcrumbs__item-link">
-                      СТРОИТЕЛЬСТВО ДЕтСКИХ БАССЕЙНОВ
+                      СТРОИТЕЛЬСТВО ДЕТСКИХ БАССЕЙНОВ
                     </div>
                   </li>
                 </ul>
               </div>
 
               <h1 class="devscreen__title">
-                СТРОИТЕЛЬСТВО ДЕтСКИХ БАССЕЙНОВ
+               СТРОИТЕЛЬСТВО ДЕТСКИХ БАССЕЙНОВ
                 <div class="devscreen__subtitle">
                   в санкт - петербурге
                 </div>
               </h1>
               <div class="devscreen__text text">
-                Бассейны предназначенные для детского плавания требуют особого внимания и
-                профессионального подхода, так как должны соответствовать самым
+                Бассейны, предназначенные для детского плавания, требуют особого внимания и профессионального подхода,
+                так как должны соответствовать самым
                 <br>
-                строгим требованиям
-                СанПиНов и быть абсолютно безопасными для самых маленьких посетителей.
+                строгим требованиям СанПиНов и быть абсолютно безопасными для самых маленьких посетителей.
               </div>
               <div data-modal class="devscreen__btn global-btn global__btn-contact main-btn">
                 узнать про услугу
@@ -343,7 +342,8 @@
               <p class="benefits__text text">
                 Для обеспечения безопасности объекта следует уделить внимание абсолютно всем «мелочам» -
                 характеристикам оборудования фильтрации, наличию поручней, коэффициенту скольжения
-                плитки и покрытиям обходных дорожек, вентиляции и т.д.
+                <a class="questions__item-link" href="mosaic.html">плитки</a> и покрытиям обходных дорожек,
+                вентиляции и т.д.
               </p>
             </div>
 
@@ -352,21 +352,21 @@
                 СКОРОСТЬ ФИЛЬТРАЦИИ
               </div>
               <p class="benefits__text text">
-                Скорость прохождения воды через поверхность фильтра – ключевой показатель качества очистки
-                воды на фильтре. В детских бассейнах не должна превышать установленных значений в
-                зависимости от назначения бассейна и возраста посетителей.
+               Скорость прохождения воды через поверхность фильтра – ключевой показатель качества очистки
+               воды на фильтре. Она не должна превышать установленных значений в зависимости от назначения бассейна и
+               возраста посетителей.
               </p>
             </div>
 
             <div class="benefits__item devbenefits__item">
               <div class="benefits__subtitle">
-                Кратность водообмена
+                КРАСТНОСТЬ ВОДООБМЕНА
               </div>
               <p class="benefits__text text">
-                Один из самых важных показателей, который строго регламентируется нормами, и определяет
-                скорость фильтрации и соответственно качество воды в чаше.
-                Так например для детей до 7 лет не должен превышать 30 мин
-                Если возраст посетителей 7-10 лет, то не более 2 часов
+                Один из самых важных показателей, который строго регламентируется нормами и определяет
+                скорость фильтрации и, соответственно, качество воды в чаше.
+                Так, например, для детей до 7 лет не должен превышать 30 мин. Если возраст посетителей 7-10 лет, то не
+                более 2 часов.
               </p>
             </div>
 
@@ -375,10 +375,12 @@
                 ГЛУБИНА БАССЕЙНА
               </div>
               <p class="benefits__text text">
-                При проектировании детского бассейна важно учитывать возраст будущих, юных посетителей:
-                для дошкольников, младше 7 лет – глубина не должна превышать 0,6 м
-                в детских бассейнах для обучения плавания глубина должна быть от 0,6 до 0,8 м
-                для грудничкового плавания комфортная глубина составляет 1,1 м
+                При <a class="questions__item-link" href="design.html">проектировании</a> важно учитывать возраст
+                будущих,
+                  юных посетителей:
+                - для дошкольников, младше 7 лет – глубина не должна превышать 0,6 м;
+                - для обучения плаванию - глубина должна быть от 0,6 до 0,8 м;
+                - для грудничкового плавания комфортная глубина составляет 1,1 м.
               </p>
             </div>
 
@@ -400,15 +402,15 @@
           галерея работ
         </h2>
         <p class="projects__text subtitle text">
-          В галерее наших работ Вы можете ознакомиться с проектами, реализованными нашей компанией, каждым из которых мы
-          по праву гордимся.
+          В галерее работ Вы можете ознакомиться с некоторыми проектами, реализованными нашей компанией, каждым из
+          которых мы праву гордимся.
         </p>
 
         <div class="projects__inner">
 
           <div class="projects__wrapper-item">
             <a class="projects__item" href="product10.html"
-              style="background-image: url('images/content/projects__img10.jpg');">
+              style="background-image: url('images/content/product10-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   10. ДЕТСКИЙ БАССЕЙН
@@ -418,15 +420,14 @@
                 </h3>
 
                 <p class="projects__text-more text">
-                  Бассейн для обучения плаванию. Расположен в торговом центре, каркас чаши выполнен
-                  из металла и отделан пленкой ПВХ. С помощью корректно подобранного оборудования и
-                  автоматической станции дозирования поддерживается высокое качество воды.
+                  Бассейн для обучения плаванию. Расположен в торговом центре, каркас чаши выполнен из металла и отделан
+                  пленкой ПВХ...
                 </p>
               </div>
             </a>
 
             <a class="projects__item" href="product02.html"
-              style="background-image: url('images/content/projects__img2.jpg');">
+              style="background-image: url('images/content/product2-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   02. МОЗАИЧНЫЙ БАССЕЙН С ДЖАКУЗИ
@@ -435,10 +436,8 @@
                   </p>
                 </h3>
                 <p class="projects__text-more text">
-                  Бассейн отделан белоснежной мозаикой и имеет «римский» вход. Конструкция чаши
-                  отлита по разработанному проекту одновременно с бетонированием фундамента здания.
-                  Оборудование бассейна вместе с переливной емкостью расположено в техническом этаже
-                  дома.
+                  Отделан белоснежной мозаикой и имеет «римский» вход. Конструкция чаши отлита по разработанному
+                  проекту...
                 </p>
               </div>
             </a>
@@ -448,7 +447,7 @@
 
           <div class="projects__wrapper-item">
             <a class="projects__item" href="product04.html"
-              style="background-image: url('images/content/projects__img4.jpg');">
+              style="background-image: url('images/content/product4-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   04. БАННЫЙ КОМПЛЕКС С БАССЕЙНОМ В КОТТЕДЖЕ
@@ -458,15 +457,13 @@
                 </h3>
 
                 <p class="projects__text-more text">
-                  Бассейн имеет переменную глубину. Бетонная чаша бассейна отделана пленкой ПВХ,
-                  вокруг построена деревянная терраса. Оборудование расположено в техническом
-                  помещении выше уровня воды.
+                  Для восстановления герметичности чаши было принято решение облицевать ее пленкой ПВХ...
                 </p>
 
               </div>
             </a>
             <a class="projects__item" href="product12.html"
-              style="background-image: url('images/content/projects__img12.jpg');">
+              style="background-image: url('images/content/product12-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   12. СЕМЕЙНЫЙ БАССЕЙН
@@ -475,9 +472,8 @@
                   </p>
                 </h3>
                 <p class="projects__text-more text">
-                  Чаша построена в существующем доме, для семейного пользования. Оригинальный
-                  дизайн чаши и помещения, в сочетании с баней служит центром притяжения для друзей и
-                  их детей.
+                  Проведен капитальный ремонт помещения сауны. Построены бассейн, открытая душевая, реконструированы
+                  финская сауна и комната отдыха...
                 </p>
               </div>
             </a>
@@ -515,7 +511,9 @@
                 </div>
 
                 <p class="questions__item-text text">
-                  С бизнес планирования и проектирования будущего объекта. Одной из составляющих проекта
+                  С бизнес <a class="questions__item-link" href="design.html">планирования и
+                    проектирования</a> будущего объекта. Одной из составляющих <a class="questions__item-link"
+                      href="design.html">проекта</a>
                   станет раздел ТХ в который войдет проект чаши и водоподготовки бассейна.
                 </p>
               </div>
@@ -547,7 +545,7 @@
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
-                    Какая рекомендуемая температура должна быть в детском бассейне?
+                    КАКАЯ РЕКОМЕНДУЕМАЯ ТЕМПЕРАТУРА ДОЛЖНА БЫТЬ В ДЕТСКОМ БАССЕЙНЕ?
                   </p>
                   <div class="questions__item-wrapper">
                     <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -555,9 +553,9 @@
                   </div>
                 </div>
                 <p class="questions__item-text text">
-                  Воспитанникам детских садов, не достигших семилетнего возраста, рекомендованная
-                  температура воды 30-320 С. Детям с семи лет и вплоть до подросткового возраста,
-                  температурные границы воды могут быть снижены до 29-300 С
+                  Воспитанникам детских садов, не достигших семилетнего возраста, рекомендованная температура воды
+                  30-320 ℃. Детям с семи лет и вплоть до подросткового возраста, температурные границы воды могут быть
+                  снижены до 29-300 ℃.
                 </p>
               </div>
             </div>
@@ -566,7 +564,7 @@
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
-                    Нужна ли подпитка свежей воды в бассейне?
+                    НУЖНА ЛИ ПОДПИТКА СВЕЖЕЙ ВОДЫ В БАССЕЙНЕ?
                   </p>
                   <div class="questions__item-wrapper">
                     <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -574,8 +572,8 @@
                   </div>
                 </div>
                 <p class="questions__item-text text">
-                  Обязательно во всех общественных, а тем более в детских бассейнах для обновления воды в чаше
-                  должна быть предусмотрена регулярная подпитка свежей водой
+                  Обязательно во всех общественных, а тем более в детских бассейнах для обновления воды в чаше должна
+                  быть предусмотрена регулярная подпитка свежей водой.
                 </p>
               </div>
             </div>
