--- a/app/concrete.html
+++ b/app/concrete.html
@@ -309,17 +309,14 @@
               </div>
 
               <h1 class="devscreen__title">
-                Строительство БЕТОННЫХ бассейнов
+                СТРОИТЕЛЬСТВО БЕТОННЫХ БАССЕЙНОВ
                 <div class="devscreen__subtitle">
-                  в санкт - петербурге
+                 В Санкт - Петербурге
                 </div>
               </h1>
               <div class="devscreen__text text">
-                Бассейны из бетона – классика, проверенная временем.
-                <br>
-                Бетон – универсальный и в то же время
-                уникальный строительный материал, который, благодаря своим свойствам, позволяет воплощать
-                в реальность даже самые смелые архитектурные решения.
+                Бетон – универсальный и в то же время уникальный строительный материал, который, благодаря своим
+                свойствам, позволяет воплощать в реальность даже самые смелые архитектурные решения.
               </div>
               <div data-modal class="devscreen__btn global-btn global__btn-contact main-btn">
                 узнать про услугу
@@ -341,8 +338,8 @@
               </h3>
               <div class="stages__item__text text">
                 При проектировании решаются все основные вопросы, связанные с будущим бассейном – его назначение,
-                планировочные решения помещений бассейна, схема фильтрации, расположение элементов в чаше, способ
-                прокладки труб и комплектация оборудованием.
+                планировочные решения помещений, схема фильтрации, расположение элементов в чаше, способ прокладки труб
+                и комплектация оборудованием.
               </div>
             </div>
             <div class="stages__item">
@@ -350,23 +347,17 @@
                 2. СТРОИТЕЛЬСТВО ЧАШИ
               </h3>
               <div class="stages__item__text text">
-                Если вы планируете строить уличный бассейн, мы можем выполнить все этапы работ:
+                Если Вы планируете строить уличный бассейн, мы можем выполнить все этапы работ:
                 <br>
                 <br>
-                • Рытье котлована, и вывоз грунта, выполнение подушки.
+                • Рытье котлована, и вывоз грунта, выполнение подушки;
                 <br>
-                • Смонтировать опалубку которая может быть многоразовой разборной или деревянной – в зависимости от
-                конфигурации чаши и целесообразности.
+                • Монтирование опалубки, которая может быть многоразовой, разборной или деревянной – в зависимости от
+                конфигурации чаши и целесообразности;
                 <br>
-                • Установить арматурные каркасы и выполнить все необходимые ниши и их усиления.
+                • Установка каркасов из арматуры и выполнение всех необходимых ниш и их усилений;
                 <br>
-                • Приемка бетона, разборка и вывоз опалубки и выполнение обратной засыпки
-                Если у вас ведется строительство дома, возьмем на себя авторский надзор и полное сопровождение процесса
-                строительства.
-                <br>
-                <br>
-                Если у вас ведется строительство дома, возьмем на себя авторский надзор и полное сопровождение процесса
-                строительства.
+                • Приемка бетона, разборка и вывоз опалубки, и выполнение обратной засыпки.
               </div>
             </div>
 
@@ -378,8 +369,7 @@
                 После того как бетон наберет достаточную прочность, производятся работы по оштукатуриванию поверхности.
                 <br>
                 При этом необходимо обеспечить абсолютное сцепление штукатурки с бетоном на протяжении всего срока
-                службы
-                бассейна и ее стойкость к растрескиванию.
+                службы бассейна и ее стойкость к растрескиванию.
               </div>
             </div>
 
@@ -388,8 +378,8 @@
                 4. ГИДРОИЗОЛЯЦИЯ
               </h3>
               <div class="stages__item__text text">
-                На этом этапе в чаше монтируются закладные детали, а на поверхность наносится специально
-                гидроизоляционное покрытие, которое обеспечит водонепроницаемость и даже способно выдерживать возможное
+                На этом этапе в чаше монтируются закладные детали, а на поверхность наносится специальное
+                гидроизоляционное покрытие, которое обеспечивает водонепроницаемость и способно выдерживать возможное
                 раскрытие трещин.
               </div>
             </div>
@@ -399,12 +389,11 @@
                 5. ОТДЕЛКА
               </h3>
               <div class="stages__item__text text">
-                Самый надежный и долговечный материал для отделки бассейна - керамическая плитка или мозаика, которые
+                Самый надежный и долговечный материал для отделки - керамическая плитка или мозаика, которые
                 предназначены для использования в бассейнах.
                 <br>
-                Эти материалы должны обладать минимальным или нулевым
-                коэффициентом водопоглощения, а также быть устойчивыми к длительному воздействию дезинфектанта,
-                содержащегося в воде бассейна.
+                Эти материалы должны обладать минимальным или нулевым коэффициентом водопоглощения, а также быть
+                устойчивыми к длительному воздействию дезинфектанта, содержащегося в воде.
               </div>
             </div>
           </div>
@@ -425,8 +414,8 @@
                 ИНДИВИДУАЛЬНОСТЬ
               </div>
               <p class="benefits__text text">
-                Форма чаши может быть абсолютно любой, а размер бассейна не ограничен оснасткой
-                производителя или механическими свойствами конструкционного материала.
+                Форма чаши может быть абсолютно любой, а размер не ограничен оснасткой производителя или механическими
+                свойствами конструкционного материала.
               </p>
             </div>
 
@@ -435,8 +424,8 @@
                 УНИВЕРСАЛЬНОСТЬ
               </div>
               <p class="benefits__text text">
-                Чаша бетонного бассейна проектируется исходя из свободного пространства. То есть вам не
-                придется переносить уже существующие объекты расположенные на участке.
+                Чаша бетонного бассейна проектируется исходя из свободного пространства. То есть Вам не
+                придется переносить уже существующие объекты, расположенные на участке.
               </p>
             </div>
 
@@ -448,6 +437,7 @@
                 Несмотря на то, что заявленный срок службы железобетонных сооружений составляет
                 «всего» 150 лет, существуют конструкции аналогичного возраста, не подвергавшиеся
                 капитальному ремонту и хорошо сохранившиеся до наших дней.
+
               </p>
             </div>
 
@@ -459,6 +449,7 @@
                 Бассейн из бетона выдерживает давление грунта и воздействие грунтовых вод, в отличие от своих
                 «собратьев». Не подвержен деформации, не требует ухода. Его свойства не меняются со
                 временем. Из железобетона получаются самые прочные и долговечные конструкции.
+
               </p>
             </div>
 
@@ -477,48 +468,45 @@
 
       <section class="projects section">
         <h2 class="projects__title title">
-          галерея работ
+          ГАЛЕРЕЯ РАБОТ
         </h2>
         <p class="projects__text subtitle text">
-          В галерее наших работ Вы можете ознакомиться с проектами, реализованными нашей компанией, каждым из которых мы
-          по праву гордимся.
+         В галерее работ Вы можете ознакомиться с некоторыми проектами, реализованными нашей компанией, каждым из
+         которых мы праву гордимся.
         </p>
 
         <div class="projects__inner">
 
           <div class="projects__wrapper-item">
-            <a class="projects__item" href="product01.html" style="background-image: url('images/content/projects__img1.jpg');">
+            <a class="projects__item" href="product08.html"
+              style="background-image: url('images/content/product8-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
-                  01. ДОМАШНИЙ БАССЕЙН
+                  08. ДОМАШНИЙ БАССЕЙН
                   <p class="projects__more text">
                     Подробнее...
                   </p>
                 </h3>
 
                 <p class="projects__text-more text">
-                  Бассейн имеет глубину 1,5 метра. «Римская» лестница, отделанная круглой мозаикой,
-                  плавно спускается в воду. Бассейн оборудован автоматической станцией дозирования
-                  химреагентов. Подогрев воды организован от газового котла.
+                  Бассейн имеет глубину 1,5 метра. «Римская» лестница, отделанная круглой мозаикой, плавно спускается в
+                  воду...
                 </p>
               </div>
             </a>
 
-            <a class="projects__item" href="product03.html"
-              style="background-image: url('images/content/projects__img3.jpg');">
+            <a class="projects__item" href="product12.html"
+              style="background-image: url('images/content/product12-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
-                  03. БАЗА ОТДЫХА
+                  12. СПА КОМПЛЕКС НА БАЗА ОТДЫХА
                   <p class="projects__more text">
                     Подробнее...
                   </p>
                 </h3>
                 <p class="projects__text-more text">
-                  Проведен капитальный ремонт помещения сауны. Построены бассейн, открытая душевая,
-                  реконструированы финская сауна и комната отдыха. В интерьер введена
-                  конструкция деревянного сруба выходящая во влажную зону, в комнату
-                  отдыха и в оранжерею, визуально объединяющая эти пространства. Выполнен
-                  комплексный дизайн проект и полная реконструкция существующего помещения.
+                  Проведен капитальный ремонт помещения сауны. Построены бассейн, открытая душевая, реконструированы
+                  финская сауна и комната отдыха...
 
                 </p>
               </div>
@@ -529,7 +517,7 @@
 
           <div class="projects__wrapper-item">
             <a class="projects__item" href="product06.html"
-              style="background-image: url('images/content/projects__img6.jpg');">
+              style="background-image: url('images/content/product6-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   06. КУПЕЛЬ НА ДАЧЕ
@@ -539,16 +527,14 @@
                 </h3>
 
                 <p class="projects__text-more text">
-                  Уличная купель предназначенная для круглогодичного использования. Железобетонная
-                  конструкция чаши встроена в открытую террасу возле дома. Откидывающаяся лестница
-                  позволяет закрывать купель легкой пластиковой крышкой, что позволяет воде оставаться
-                  всегда идеально чистой.
+                  Уличная купель, предназначенная для круглогодичного использования. Железобетонная конструкция чаши
+                  встроена в открытую террасу возле дома...
                 </p>
 
               </div>
             </a>
             <a class="projects__item" href="product11.html"
-              style="background-image: url('images/content/projects__img11.jpg');">
+              style="background-image: url('images/content/product11-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   11. БАССЕЙН - КУПЕЛЬ
@@ -557,10 +543,8 @@
                   </p>
                 </h3>
                 <p class="projects__text-more text">
-                  Плиточный бассейн, построенный на берегу озера. Особенностью данного проекта
-                  является отсутствие подогрева и фильтрации. Слив и налив чаши контролируются с
-                  помощью удаленного доступа. В сочетании с русской парной дарит владельцам и их
-                  гостям невероятные ощущения.
+                  Плиточный бассейн, построенный на берегу озера. Особенностью данного проекта является отсутствие
+                  подогрева и фильтрации...
                 </p>
               </div>
             </a>
@@ -589,7 +573,7 @@
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
-                    Возможна ли установка в готовый бассейн противотока или гидромассажа?
+                    ВОЗМОЖНА ЛИ УСТАНОВКА В ГОТОВЫЙ БАССЕЙН ПРОТИВОТОКА ИЛИ ГИДРОМАССАЖА?
                   </p>
                   <div class="questions__item-wrapper">
                     <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -598,10 +582,9 @@
                 </div>
 
                 <p class="questions__item-text text">
-                  В готовом бассейне чаше всего возможна установка только навесного оборудования. В отдельных случаях
+                  В готовом бассейне чаще всего возможна установка только навесного оборудования. В отдельных случаях
                   возможно установить дополнительное оборудования на любом типе чаши, но это почти всегда влечет
-                  остановку
-                  бассейна и
+                  остановку бассейна и
                   <a class="questions__item-link" href="repair.html">его реконструкцию</a>.
                 </p>
               </div>
@@ -611,7 +594,7 @@
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
-                    Сколько времени примерно занимает строительство бассейна средних размеров?
+                    СКОЛЬКО ВРЕМЕНИ ПРИМЕРНО ЗАНИМАЕТ СТРОИТЕЛЬСТВО БАССЕЙНА СРЕДНИХ РАЗМЕРОВ?
                   </p>
                   <div class="questions__item-wrapper">
                     <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -630,7 +613,7 @@
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
-                    Как долго прослужит бетонный бассейн?
+                    КАК ДОЛГО ПРОСЛУЖИТ БЕТОННЫЙ БАССЕЙН?
                   </p>
                   <div class="questions__item-wrapper">
                     <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -648,7 +631,7 @@
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
-                    Можно ли установить освещение в готовом бассейне?
+                    МОЖНО ЛИ УСТАНОВИТЬ ОСВЕЩЕНИЕ В ГОТОВОМ БАССЕЙНЕ?
                   </p>
                   <div class="questions__item-wrapper">
                     <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -657,8 +640,7 @@
                 </div>
                 <p class="questions__item-text text">
                   Возможно - с помощью накладных светильников различного типа: галогеновых, светодиодных, с
-                  разноцветными
-                  светофильтрами.
+                  разноцветными светофильтрами.
                 </p>
               </div>
             </div>
@@ -667,7 +649,7 @@
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
-                    Планирую построить уличный бассейн. Какой лучше выбрать: скиммерный или переливной?
+                    ПЛАНИРУЮ ПОСТРОИТЬ УЛИЧНЫЙ БАССЕЙН. КАКОЙ ЛУЧШЕ ВЫБРАТЬ: СКИММЕРНЫЙ ИЛИ ПЕРЕЛИВНОЙ?
                   </p>
                   <div class="questions__item-wrapper">
                     <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -675,7 +657,7 @@
                   </div>
                 </div>
                 <p class="questions__item-text text">
-                  В целом переливная схема фильтрации эффективнее, и эстетичнее, но потребует дополнительных затрат на
+                  В целом, переливная схема фильтрации эффективнее и эстетичнее, но потребует дополнительных затрат на
                   переливную емкость и регулярную очистку переливного лотка.
                 </p>
               </div>
