--- a/app/construction.html
+++ b/app/construction.html
@@ -303,19 +303,18 @@
               </div>
 
               <h1 class="devscreen__title">
-                Строительство бассейнов “ПОД КЛЮЧ”
+               Строительство бассейнов “ПОД КЛЮЧ”
                 <div class="devscreen__subtitle">
-                  в санкт - петербурге
+                  В Санкт - Петербурге
                 </div>
               </h1>
               <div class="devscreen__text text">
-                Специалисты компании «Линия воды» помогут вам воплотить в жизнь вашу мечту!
+                Специалисты компании «Линия воды» помогут Вам воплотить в жизнь вашу мечту!
                 <br>
                 <br>
-                С 2001 года занимаемся проектированием и строительством бассейнов – гарантируем
-                <br>
-                профессиональный подход
+                С 2001 года занимаемся проектированием и строительством бассейнов – гарантируем профессиональный подход
                 при решении любых задач.
+                
               </div>
               <div data-modal class="devscreen__btn global-btn global__btn-contact main-btn">
                 узнать про услугу
@@ -333,8 +332,8 @@
           НАША СПЕЦИАЛИЗАЦИЯ
         </h2>
         <p class="spec__text subtitle text">
-          Компания Линия воды специализируется на проектировании и строительстве бетонных, а также детских бассейнов с
-          любым типом чаш:
+          Компания Линия воды специализируется на проектировании и строительстве бетонных и детских бассейнов с любым
+          типом чаш:
         </p>
 
         <div class="spec__inner">
@@ -350,7 +349,7 @@
                   Подробнее...
                 </div>
                 <p class="spec__text-more text">
-                  Надежное и долговечное решение, позволяющее получить чашу любых размеров и формы
+                  Надежное и долговечное решение, позволяющее получить чашу любых размеров и формы.
                 </p>
               </div>
             </a>
@@ -365,7 +364,7 @@
                   Подробнее...
                 </div>
                 <p class="spec__text-more text">
-                  Нестареющая классика на все времена
+                  Нестареющая классика на все времена!
                 </p>
               </div>
             </a>
@@ -382,7 +381,7 @@
                   Подробнее...
                 </div>
                 <p class="spec__text-more text">
-                  Современное и технологичное решение являющееся одновременно и отделкой и гидроизоляцией
+                  Современное и технологичное решение, являющееся одновременно и отделкой и гидроизоляцией.
                 </p>
               </div>
             </a>
@@ -397,7 +396,7 @@
                   Подробнее...
                 </div>
                 <p class="spec__text-more text">
-                  Наша задача – обеспечить высокие стандарты качества и безопасности вашего бассейна
+                  Наша задача – обеспечить высокие стандарты качества и безопасности Вашего бассейна.
                 </p>
               </div>
             </a>
@@ -416,7 +415,7 @@
       <section class="benefits section">
         <div class="container">
           <h2 class="benefits__title title">
-            ПРЕИМУЩЕСТВА РАБОТЫ С НАМИ
+           ПРЕИМУЩЕСТВА РАБОТЫ С НАМИ
           </h2>
           <div class="benefits__inner">
             <div class="benefits__item">
@@ -424,18 +423,17 @@
                 Уникальное предложение
               </div>
               <p class="benefits__text text">
-                Только для наших клиентов: при заключении договора на сервисное обслуживание построенного нами бассейна
-                даем +1 год к гарантии
+                Только для наших клиентов: при заключении договора на сервисное обслуживание даем +1 год к гарантии.
               </p>
             </div>
 
             <div class="benefits__item">
               <div class="benefits__subtitle">
-                Наилучшее решение для вас
+                Наилучшее решение для Вас
               </div>
               <p class="benefits__text text">
                 Мы не являемся продавцами оборудования. То есть мы не ограничиваемся «собственным» ассортиментом и
-                подберем для вас самый оптимальный вариант, из предлагаемого на рынке оборудования и материалов.
+                подберем для Вас самый оптимальный вариант из предлагаемого на рынке оборудования и материалов.
               </p>
             </div>
 
@@ -444,7 +442,7 @@
                 Проект в подарок
               </div>
               <p class="benefits__text text">
-                При заказе бассейна «под ключ» стоимость разработки проекта идет в зачет стоимости оборудования
+                При заказе «под ключ» - стоимость разработки проекта идет в зачет стоимости оборудования.
               </p>
             </div>
 
@@ -453,20 +451,19 @@
                 Фиксированная стоимость
               </div>
               <p class="benefits__text text">
-                В договоре прописываем и соблюдаем точные сроки и фиксированную стоимость выполнения работ
+                В договоре прописываем и соблюдаем точные сроки и фиксированную стоимость выполнения работ.
               </p>
             </div>
 
             <div class="benefits__item">
               <div class="benefits__subtitle">
-                Бесплатный замер
+                Бесплатный замер 
                 <br>
                 и расчет стоимости
               </div>
               <p class="benefits__text text">
-                Наш специалист приедет к вам на объект и подробно проконсультирует по любым вопросам, связанным со
-                строительством бассейна и не только, а так же бесплатно произведет замеры и расчёт стоимости будущего
-                объекта.
+                Наш специалист приедет к Вам на объект и подробно проконсультирует по любым вопросам, связанным со
+                строительством, и не только, а также бесплатно произведет замеры и расчёт стоимости будущего объекта.
               </p>
             </div>
 
@@ -476,7 +473,7 @@
               </div>
               <p class="benefits__text text">
                 Наша цель – оказание качественных услуг. Мы заинтересованы в предложении оптимального решения в рамках
-                требований заказчики и заложенного бюджета
+                требований заказчики и заложенного бюджета.
               </p>
             </div>
 
@@ -493,34 +490,35 @@
 
       <section class="projects section">
         <h2 class="projects__title title">
-          галерея работ
+          ГАЛЕРЕЯ РАБОТ
         </h2>
         <p class="projects__text subtitle text">
-          В галерее наших работ Вы можете ознакомиться с проектами, реализованными нашей компанией, каждым из которых мы
-          по праву гордимся.
+          В галерее работ Вы можете ознакомиться с некоторыми проектами, реализованными нашей компанией, каждым из
+          которых мы праву гордимся.
         </p>
 
         <div class="projects__inner">
 
           <div class="projects__wrapper-item">
-            <a class="projects__item" href="product01.html" style="background-image: url('images/content/projects__img1.jpg');">
+            <a class="projects__item" href="product01.html"
+              style="background-image: url('images/content/product1-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
-                  01. ДОМАШНИЙ БАССЕЙН
+                  01. СЕМЕЙНЫЙ БАССЕЙН В ОТДЕЛЬНО СТОЯЩЕМ ЗДАНИИ
                   <p class="projects__more text">
                     Подробнее...
                   </p>
                 </h3>
 
                 <p class="projects__text-more text">
-                  Бассейн имеет глубину 1,5 метра. «Римская» лестница, отделанная круглой мозаикой,
-                  плавно спускается в воду. Бассейн оборудован автоматической станцией дозирования
-                  химреагентов. Подогрев воды организован от газового котла.
+                  Переливной бассейн для активной семьи с мелкой зоной для детей. В чаше расположены две гидромассажные
+                  зоны...
                 </p>
               </div>
             </a>
 
-            <a class="projects__item" href="product02.html" style="background-image: url('images/content/projects__img2.jpg');">
+            <a class="projects__item" href="product02.html"
+              style="background-image: url('images/content/product2-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   02. МОЗАИЧНЫЙ БАССЕЙН С ДЖАКУЗИ
@@ -529,10 +527,8 @@
                   </p>
                 </h3>
                 <p class="projects__text-more text">
-                  Бассейн отделан белоснежной мозаикой и имеет «римский» вход. Конструкция чаши
-                  отлита по разработанному проекту одновременно с бетонированием фундамента здания.
-                  Оборудование бассейна вместе с переливной емкостью расположено в техническом этаже
-                  дома.
+                  Переливной бассейн для активной семьи с мелкой зоной для детей. В чаше расположены две гидромассажные
+                  зоны...
                 </p>
               </div>
             </a>
@@ -541,35 +537,34 @@
 
 
           <div class="projects__wrapper-item">
-            <a class="projects__item" href="product04.html" style="background-image: url('images/content/projects__img4.jpg');">
+            <a class="projects__item" href="product04.html"
+              style="background-image: url('images/content/product4-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
-                  04. БАННЫЙ КОМПЛЕКС С БАССЕЙНОМ В КОТТЕДЖЕ
+                  04. ПЛЁНОЧНЫЙ БАССЕЙН
                   <p class="projects__more text">
                     Подробнее...
                   </p>
                 </h3>
 
                 <p class="projects__text-more text">
-                  Бассейн имеет переменную глубину. Бетонная чаша бассейна отделана пленкой ПВХ,
-                  вокруг построена деревянная терраса. Оборудование расположено в техническом
-                  помещении выше уровня воды.
+                  Для восстановления герметичности чаши было принято решение облицевать ее пленкой ПВХ...
                 </p>
 
               </div>
             </a>
-            <a class="projects__item" href="product10.html" style="background-image: url('images/content/projects__img10.jpg');">
+            <a class="projects__item" href="product10.html"
+              style="background-image: url('images/content/product10-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
-                  10. ДЕТСКИЙ БАССЕЙН
+                  10. БАССЕЙН ДЛЯ ОБУЧЕНИЯ ПЛАВАНИЮ
                   <p class="projects__more text">
                     Подробнее...
                   </p>
                 </h3>
                 <p class="projects__text-more text">
-                  Бассейн для обучения плаванию. Расположен в торговом центре, каркас чаши выполнен
-                  из металла и отделан пленкой ПВХ. С помощью корректно подобранного оборудования и
-                  автоматической станции дозирования поддерживается высокое качество воды.
+                  Бассейн начального уровня, для детей, расположен в торговом центре. Каркас чаши выполнен из металла и
+                  отделан пленкой ПВХ...
                 </p>
               </div>
             </a>
@@ -598,7 +593,7 @@
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
-                    Какую отделку для бассейна выбрать?
+                    КАКУЮ ОТДЕЛКУ ДЛЯ БАССЕЙНА ВЫБРАТЬ?
                   </p>
                   <div class="questions__item-wrapper">
                     <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -616,10 +611,6 @@
                   <a class="questions__item-link" href="mosaic.html">плиткой</a>,
                   либо
                   <a class="questions__item-link" href="pvc.html">пленкой ПВХ</a>.
-                  <br>
-                  <br>
-                  Если бассейн находится под открытым небом, то лучше применить
-                  <a class="questions__item-link" href="pvc.html">пленку ПВХ</a>
                 </p>
               </div>
             </div>
@@ -628,7 +619,7 @@
                <div class="questions__item-inners">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
-                  Что такое скиммерный и переливной бассейн?
+                  ЧТО ТАКОЕ СКИММЕРНЫЙ И ПЕРЕЛИВНОЙ БАССЕЙН?
                 </p>
                 <div class="questions__item-wrapper">
                   <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -636,16 +627,15 @@
                 </div>
               </div>
               <p class="questions__item-text text">
-                Скиммерный – уровень воды при этом типе фильтрации ниже борта на 15-20 см и загрязненная
-                вода забирается с поверхности через один или несколько скиммеров. Применяется
-                такая система в основном для частных бассейнов небольшого объема.
+                Скиммерный – уровень воды при этом типе фильтрации ниже борта на 15-20 см, и загрязненная вода
+                забирается с поверхности через один или несколько скиммеров. Применяется такая система в основном для
+                частных бассейнов небольшого объема.
                 <br>
                 <br>
-                Переливной – Уровень воды в переливном бассейне находится на уровне верхней кромки чаши,
-                вода равномерно сливается с поверхности в переливные лотки и затем попадает в
-                компенсационная емкость расположенную ниже уровня бассейна. При этом достигается более
-                качественная очистка воды чем в скиммерном. Несомненно, данная схема обладает более
-                привлекательным внешним видом.
+                Переливной – уровень воды в переливном бассейне находится на уровне верхней кромки чаши. Вода равномерно
+                сливается с поверхности в переливные лотки и затем попадает в компенсационная емкость, расположенную
+                ниже уровня бассейна. При этом достигается более качественная очистка воды, чем в скиммерном.
+                Несомненно, данная схема обладает более привлекательным внешним видом.
 
               </p>
               </div>
@@ -655,7 +645,7 @@
               <div class="questions__item-inners">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
-                  Какое оборудование вы можете предложить?
+                  КАКОЕ ОБОРУДОВАНИЕ ВЫ МОЖЕТЕ ПРЕДЛОЖИТЬ?
                 </p>
                 <div class="questions__item-wrapper">
                   <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -663,10 +653,9 @@
                 </div>
               </div>
               <p class="questions__item-text text">
-                Мы подберем для вас наилучший и оптимальный вариант оборудования для фильтрации, нагрева
-                и очистки воды, а также дополним ваш бассейн аттракционами, исходя из ваших пожеланий и
-                технической возможностью
-                <a class="questions__item-link" href="#">проекта</a>.
+                Мы подберем для Вас наилучший и оптимальный вариант оборудования для фильтрации, нагрева и очистки воды,
+                а также дополним Ваш бассейн аттракционами, исходя из Ваших пожеланий и технической возможностью
+                <a class="questions__item-link" href="design.html">проекта</a>.
               </p>
               </div>
             </div>
@@ -675,7 +664,7 @@
                 <div class="questions__item-inners">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
-                  Что делать если чаша дала течь?
+                  ЧТО ДЕЛАТЬ ЕСЛИ ЧАША ДАЛА ТЕЧЬ?
                 </p>
                 <div class="questions__item-wrapper">
                   <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -685,10 +674,10 @@
               <p class="questions__item-text text">
                 Со временем сложные технические объекты могут полностью или частично прийти в негодность.
                 <br>
-                Для определения причин и дальнейших мероприятий по ремонту или реконструкции, необходим
-                выезд специалиста на диагностику. Более подробную информацию вы найдете в разделе
-                <a class="questions__item-link" href="#">«Ремонт
-                  и реконструкция»</a>
+                Для определения причин и дальнейших мероприятий по ремонту или реконструкции, необходим выезд
+                специалиста на диагностику. Более подробную информацию Вы найдете в разделе
+                <a class="questions__item-link" href="repair.html">«Ремонт
+                  и реконструкция»</a>.
               </p>
               </div>
             </div>
@@ -697,7 +686,7 @@
                 <div class="questions__item-inners">
               <div class="questions__item-title">
                 <p class="questions__item-title--text">
-                  Как можно очистить воду в бассейне?
+                  КАК МОЖНО ОЧИСТИТЬ ВОДУ В БАССЕЙНЕ?
                 </p>
                 <div class="questions__item-wrapper">
                   <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -705,14 +694,14 @@
                 </div>
               </div>
               <p class="questions__item-text text">
-                При небольшом объеме воды и или при ее незначительной стоимости и при отсутствии подогрева
-                можно организовать бассейн с проточной водой.
+               При небольшом объеме воды и/или при её незначительной стоимости и при отсутствии подогрева можно
+               организовать бассейн с проточной водой.
                 <br>
                 <br>
-                При значительном объеме подогретой воды необходимо дезинфицировать и очищать
-                воду.
-                <br> Такой метод очистки воды называется рециркуляционным, когда загрязненная вода после
-                механической и биологической обработки возвращается обратно в бассейн.
+                При значительном объеме подогретой воды необходимо дезинфицировать и очищать воду.
+                <br> 
+                Такой метод очистки воды называется рециркуляционным, когда загрязненная вода после механической и
+                биологической обработки возвращается в бассейн.
               </p>
             </div>
             </div>
