--- a/app/design.html
+++ b/app/design.html
@@ -295,20 +295,20 @@
                   </li>
                   <li class="breadcrumbs__list-item">
                     <div class="breadcrumbs__item-link">
-                      ПРОЕКТИРОВАНИЕ бассейнов
+                      ПРОЕКТИРОВАНИЕ БАССЕЙНОВ
                     </div>
                   </li>
                 </ul>
               </div>
 
               <h1 class="devscreen__title">
-                ПРОЕКТИРОВАНИЕ бассейнов
+                ПРОЕКТИРОВАНИЕ БАССЕЙНОВ
                 <div class="devscreen__subtitle">
                   в санкт - петербурге
                 </div>
               </h1>
               <div class="devscreen__text text">
-                Специалисты компании «Линия воды» помогут вам воплотить в жизнь вашу мечту!
+                Специалисты компании «Линия воды» помогут Вам воплотить в жизнь Вашу мечту!
                 <br>
                 <br>
                 Проектирование бассейна – важнейший этап строительства. Стоимость строительства, сложность монтажных
@@ -347,7 +347,9 @@
               </div>
               <p class="benefits__text text">
                 Разработка проекта бассейна позволяет снизить сроки и затраты на строительство. Позволяет всем
-                участникам строительства будущего объекта понимать и взаимодействовать друг с другом.
+                участникам
+                <a class="questions__item-link" href="construction.html">строительства</a> будущего объекта понимать
+                и взаимодействовать друг с другом.
               </p>
             </div>
 
@@ -356,8 +358,9 @@
                 Экономичность
               </div>
               <p class="benefits__text text">
-                Точно рассчитаем бюджет строительства, количество необходимых материалов и исключим «непредвиденные»
-                траты
+                Точно рассчитаем бюджет <a class="questions__item-link" href="construction.html">строительства</a>,
+                количество необходимых материалов и исключим «непредвиденные»
+                траты.
               </p>
             </div>
 
@@ -367,7 +370,7 @@
               </div>
               <p class="benefits__text text">
                 Подберём все материалы и оборудование из расчёта оптимальной эффективности, нужной стоимости и
-                последующего комфортного использования
+                последующего комфортного использования.
               </p>
             </div>
 
@@ -398,8 +401,8 @@
                 Составление технического задания
               </h3>
               <p class="work__text text">
-                Совместно с вами сформулируем Техническое задание к будущему бассейну
-                Составим коммерческое предложение с предварительным расчетом стоимости всех этапов работ
+                Совместно с Вами сформируем техническое задание к будущему бассейну.
+                Составим коммерческое предложение с предварительным расчетом стоимости всех этапов работ.
               </p>
             </div>
 
@@ -417,9 +420,9 @@
                 РАЗРАБОТКА 3D МОДЕЛИ
               </h3>
               <p class="work__text text">
-                Создаем трехмерную цифровую модель чаши будущего бассейна и расположенного в ней оборудования,
-                обеспечивающую возможность обзора из любой точки. Совместно с Заказчиком оцениваем функциональность,
-                удобство и безопасность использования всего комплекса
+                Создадим трехмерную цифровую модель чаши будущего бассейна и расположенного в ней оборудования,
+                обеспечивающую возможность обзора из любой точки. Совместно с заказчиком оценим функциональность,
+                удобство и безопасность использования всего комплекса.
               </p>
             </div>
             <div class="work__img" style="background-image: url('images/content/design2.jpg');"></div>
@@ -437,10 +440,10 @@
                 РАБОЧЕЕ ПРОЕКТИРОВАНИЕ
               </h3>
               <p class="work__text text">
-                Согласно требований Технического задания, производим детальную разработку проекта бассейна или всей
-                СПА зоны. Разрабатываем планировочные решения и схемы размещения основных элементов (систем
-                водоподготовки, прокладки трубопроводов, технические решения по выполнению гидроизоляции и отделки и
-                другое), выдаем нагрузки для смежных инженерных систем – отопления, электричества, водоснабжения
+                Согласно техническому заданию произведём детальную разработку проекта бассейна или всей СПА зоны.
+                Разрабатаем планировочные решения и схемы размещения основных элементов (систем водоподготовки,
+                прокладки трубопроводов, технические решения по выполнению гидроизоляции и отделки и другое), выдадим
+                нагрузки для смежных инженерных систем – отопления, электричества, водоснабжения.
               </p>
             </div>
           </div>
@@ -465,17 +468,17 @@
               </div>
               <p class="benefits__text text">
                 Только для наших клиентов: при заключении договора на сервисное обслуживание построенного нами бассейна
-                даем +1 год к гарантии
+                даем +1 год к гарантии.
               </p>
             </div>
 
             <div class="benefits__item">
               <div class="benefits__subtitle">
-                Наилучшее решение для вас
+                Наилучшее решение для Вас
               </div>
               <p class="benefits__text text">
                 Мы не являемся продавцами оборудования. То есть мы не ограничиваемся «собственным» ассортиментом и
-                подберем для вас самый оптимальный вариант, из предлагаемого на рынке оборудования и материалов.
+                подберем для Вас самый оптимальный вариант, из предлагаемого на рынке оборудования и материалов.
               </p>
             </div>
 
@@ -484,7 +487,7 @@
                 Проект в подарок
               </div>
               <p class="benefits__text text">
-                При заказе бассейна «под ключ» стоимость разработки проекта идет в зачет стоимости оборудования
+                При заказе бассейна «под ключ» стоимость разработки проекта идет в зачет стоимости оборудования.
               </p>
             </div>
 
@@ -493,7 +496,7 @@
                 Фиксированная стоимость
               </div>
               <p class="benefits__text text">
-                В договоре прописываем и соблюдаем точные сроки и фиксированную стоимость выполнения работ
+                В договоре прописываем и соблюдаем точные сроки и фиксированную стоимость выполнения работ.
               </p>
             </div>
 
@@ -504,8 +507,8 @@
                 и расчет стоимости
               </div>
               <p class="benefits__text text">
-                Наш специалист приедет к вам на объект и подробно проконсультирует по любым вопросам, связанным со
-                строительством бассейна и не только, а так же бесплатно произведет замеры и расчёт стоимости будущего
+                Наш специалист приедет к Вам на объект и подробно проконсультирует по любым вопросам, связанным со
+                строительством бассейна и не только, а также бесплатно произведет замеры и расчёт стоимости будущего
                 объекта.
               </p>
             </div>
@@ -516,7 +519,7 @@
               </div>
               <p class="benefits__text text">
                 Наша цель – оказание качественных услуг. Мы заинтересованы в предложении оптимального решения в рамках
-                требований заказчики и заложенного бюджета
+                требований заказчики и заложенного бюджета.
               </p>
             </div>
 
@@ -542,7 +545,7 @@
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
-                    Хотим построить коммерческий детский бассейн. С чего начать?
+                    ДЛЯ ЧЕГО НУЖНО ПРОЕКТИРОВАНИЕ?
                   </p>
                   <div class="questions__item-wrapper">
                     <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -551,8 +554,12 @@
                 </div>
 
                 <p class="questions__item-text text">
-                  С бизнес планирования и проектирования будущего объекта. Одной из составляющих проекта
-                  станет раздел ТХ в который войдет проект чаши и водоподготовки бассейна.
+                  Проект будущего бассейна должен содержать в себе необходимую информацию для корректной отливки
+                  <a class="questions__item-link" href="concrete.html">чаши из
+                    бетона</a>, монтажа оборудования и выполнения последующей отделки <a class="questions__item-link"
+                    href="mosaic.html">мозаикой</a> или <a class="questions__item-link" href="pvc.html">пленкой ПВХ</a>
+                  . В первую
+                  очередь он призван избежать переделок и непредвиденных трат.
                 </p>
               </div>
             </div>
@@ -561,7 +568,7 @@
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
-                    Возможна ли эксплуатация детского бассейна без хлора?
+                    ХОТИМ ПОСТРОИТЬ КОММЕРЧЕСКИЙ БАССЕЙН. С ЧЕГО НАЧАТЬ?
                   </p>
                   <div class="questions__item-wrapper">
                     <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -569,12 +576,8 @@
                   </div>
                 </div>
                 <p class="questions__item-text text">
-                  Действующие нормы не предусматривают иного решения для дезинфекции
-                  общественных бассейнов. Для уменьшения содержания хлора в воде допускается его
-                  применение совместно с установками ультрафиолетового обеззараживания. Это
-                  позволят снизить содержание свободного хлора до 0,1-0,3 мг/л, при этом
-                  поддерживать достаточный потенциал окислителя в воде.
-
+                  С бизнес-планирования и проектирования будущего объекта. Одной из составляющих проекта станет раздел
+                  ТХ в который войдет проект чаши и водоподготовки бассейна.
                 </p>
               </div>
             </div>
@@ -583,7 +586,7 @@
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
-                    Какая рекомендуемая температура должна быть в детском бассейне?
+                   ВОЗМОЖНО ЛИ ЭКСПЛУАТИРОВАТЬ БАССЕЙН БЕЗ ХЛОРА?
                   </p>
                   <div class="questions__item-wrapper">
                     <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -591,9 +594,10 @@
                   </div>
                 </div>
                 <p class="questions__item-text text">
-                  Воспитанникам детских садов, не достигших семилетнего возраста, рекомендованная
-                  температура воды 30-320 С. Детям с семи лет и вплоть до подросткового возраста,
-                  температурные границы воды могут быть снижены до 29-300 С
+                  Действующие нормы не предусматривают иного решения для дезинфекции общественных бассейнов. Для
+                  уменьшения содержания хлора в воде допускается его применение совместно с установками
+                  ультрафиолетового обеззараживания. Это позволят снизить содержание свободного хлора до 0,1-0,3 мг/л,
+                  при этом поддерживать достаточный потенциал окислителя в воде.
                 </p>
               </div>
             </div>
@@ -602,7 +606,7 @@
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
-                    Нужна ли подпитка свежей воды в бассейне?
+                    ЧТО ТАКОЕ ТЕХНИЧЕСКОЕ ЗАДАНИЕ И ДЛЯ ЧЕГО ОНО НУЖНО?
                   </p>
                   <div class="questions__item-wrapper">
                     <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -610,11 +614,32 @@
                   </div>
                 </div>
                 <p class="questions__item-text text">
-                  Обязательно во всех общественных, а тем более в детских бассейнах для обновления воды в чаше
-                  должна быть предусмотрена регулярная подпитка свежей водой
+                  Техническое задание (сокращённо ТЗ) содержит в себе необходимые требования к бассейну. Фактически при
+                  составлении технического задания идет общение между заказчиком и исполнителем, так обе стороны лучше
+                  понимают как потребности и функциональные пожелания, так и технические возможности при реализации
+                  будущего проекта.
                 </p>
               </div>
             </div>
+
+              <div class="questions__item global__item-bg">
+                <div class="questions__item-inners">
+                  <div class="questions__item-title">
+                    <p class="questions__item-title--text">
+                      НУЖНА ЛИ ПОДПИТКА СВЕЖЕЙ ВОДЫ В БАССЕЙНЕ?
+                    </p>
+                    <div class="questions__item-wrapper">
+                      <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
+                      <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+                    </div>
+                  </div>
+                  <p class="questions__item-text text">
+                    Обязательно во всех общественных, а тем более в <a class="questions__item-link"
+                      href="children.html">детских бассейнах</a> для обновления воды в чаше должна
+                    быть предусмотрена регулярная подпитка свежей водой.
+                  </p>
+                </div>
+              </div>
           </div>
 
         </div>
