--- a/app/gallery.html
+++ b/app/gallery.html
@@ -307,7 +307,7 @@
                 МЫ ГОРДИМСЯ НАШИМИ ПРОЕКТАМИ
               </h1>
               <p class="start__text text">
-                В галерее наших работ Вы можете ознакомиться с проектами, реализованными нашей компанией.
+                В галерее работ Вы можете ознакомиться с некоторыми проектами, реализованными нашей компанией.
               </p>
             </div>
           </div>
@@ -326,25 +326,25 @@
         <div class="projects__inner">
 
           <div class="projects__wrapper-item">
-            <a class="projects__item" href="product01.html" style="background-image: url('images/content/projects__img1.jpg');">
+            <a class="projects__item" href="product01.html"
+              style="background-image: url('images/content/product1-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
-                  01. ДОМАШНИЙ БАССЕЙН
+                  01. СЕМЕЙНЫЙ БАССЕЙН В ОТДЕЛЬНО СТОЯЩЕМ ЗДАНИИ
                   <p class="projects__more text">
                     Подробнее...
                   </p>
                 </h3>
 
                 <p class="projects__text-more text">
-                  Бассейн имеет глубину 1,5 метра. «Римская» лестница, отделанная круглой мозаикой,
-                  плавно спускается в воду. Бассейн оборудован автоматической станцией дозирования
-                  химреагентов. Подогрев воды организован от газового котла.
+                  Переливной бассейн для активной семьи с мелкой зоной для детей. В чаше расположены две гидромассажные
+                  зоны...
                 </p>
               </div>
             </a>
 
             <a class="projects__item" href="product02.html"
-              style="background-image: url('images/content/projects__img2.jpg');">
+              style="background-image: url('images/content/product2-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   02. МОЗАИЧНЫЙ БАССЕЙН С ДЖАКУЗИ
@@ -353,10 +353,8 @@
                   </p>
                 </h3>
                 <p class="projects__text-more text">
-                  Бассейн отделан белоснежной мозаикой и имеет «римский» вход. Конструкция чаши
-                  отлита по разработанному проекту одновременно с бетонированием фундамента здания.
-                  Оборудование бассейна вместе с переливной емкостью расположено в техническом этаже
-                  дома.
+                  Отделан белоснежной мозаикой и имеет «римский» вход. Конструкция чаши отлита по разработанному
+                  проекту...
                 </p>
               </div>
             </a>
@@ -366,85 +364,72 @@
 
           <div class="projects__wrapper-item">
             <a class="projects__item" href="product03.html"
-              style="background-image: url('images/content/projects__img3.jpg');">
+              style="background-image: url('images/content/product3-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
-                  03. БАЗА ОТДЫХА
+                  03. СЕМЕЙНЫЙ БАССЕЙН
                   <p class="projects__more text">
                     Подробнее...
                   </p>
                 </h3>
 
                 <p class="projects__text-more text">
-                  Проведен капитальный ремонт помещения сауны. Построены бассейн, открытая душевая,
-                  реконструированы финская сауна и комната отдыха. В интерьер введена
-                  конструкция деревянного сруба выходящая во влажную зону, в комнату
-                  отдыха и в оранжерею, визуально объединяющая эти пространства. Выполнен
-                  комплексный дизайн проект и полная реконструкция существующего помещения.
+                  Чаша построена в существующем доме, для семейного пользования...
 
                 </p>
 
               </div>
             </a>
             <a class="projects__item" href="product04.html"
-              style="background-image: url('images/content/projects__img4.jpg');">
+              style="background-image: url('images/content/product4-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
-                  04. БАННЫЙ КОМПЛЕКС С БАССЕЙНОМ В КОТТЕДЖЕ
+                  04. ПЛЁНОЧНЫЙ БАССЕЙН
                   <p class="projects__more text">
                     Подробнее...
                   </p>
                 </h3>
                 <p class="projects__text-more text">
-                  Бассейн имеет переменную глубину. Бетонная чаша бассейна отделана пленкой ПВХ,
-                  вокруг построена деревянная терраса. Оборудование расположено в техническом
-                  помещении выше уровня воды.
+                Для восстановления герметичности чаши было принято решение облицевать ее пленкой ПВХ...
                 </p>
               </div>
             </a>
           </div>
           <div class="projects__wrapper-item">
             <a class="projects__item" href="product05.html"
-              style="background-image: url('images/content/projects__img5.jpg');">
+              style="background-image: url('images/content/product5-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
-                  05. БАССЕЙН В ДЕРЕВЯННОМ ДОМЕ
+                 05. БАССЕЙН В ДЕРЕВЯННОМ ДОМЕ
                   <p class="projects__more text">
                     Подробнее...
                   </p>
                 </h3>
                 <p class="projects__text-more text">
-                  Идеально исполненный бассейн отлично вписывается
-                  в окружающий ландшафт. Ниже ватерлинии чаша отделана пленкой
-                  ПВХ под «светлый мрамор», выше - облицована керамогранитом. Одна
-                  из особенностей данного проекта - удаленное расположение оборудования.
-                  Автоматическая станция дезинфекции и система озонирования поддерживают
-                  в бассейне кристальную чистоту воды.
+                  Идеально исполненный бассейн отлично вписывается в окружающий ландшафт...
                 </p>
               </div>
             </a>
 
             <a class="projects__item" href="product06.html"
-              style="background-image: url('images/content/projects__img6.jpg');">
+              style="background-image: url('images/content/product6-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
-                  06. КУПЕЛЬ НА ДАЧЕ
+                 06. КУПЕЛЬ НА ДАЧЕ
                   <p class="projects__more text">
                     Подробнее...
                   </p>
                 </h3>
                 <p class="projects__text-more text">
-                  Уличная купель предназначенная для круглогодичного использования. Железобетонная
-                  конструкция чаши встроена в открытую террасу возле дома. Откидывающаяся лестница
-                  позволяет закрывать купель легкой пластиковой крышкой, что позволяет воде оставаться
-                  всегда идеально чистой.
+                  Уличная купель, предназначенная для круглогодичного использования. Железобетонная конструкция чаши
+                  встроена...
                 </p>
               </div>
             </a>
           </div>
           <div class="projects__wrapper-item">
             <a class="projects__item" href="product07.html"
-              style="background-image: url('images/content/projects__img7.jpg');">
+              style="background-image: url('images/content/product7-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   07. БАССЕЙН НА УЧАСТКЕ
@@ -453,34 +438,30 @@
                   </p>
                 </h3>
                 <p class="projects__text-more text">
-                  Уличный бассейн с павильоном. Бассейн построен на загородном участке, сдвижной
-                  павильон из поликарбоната позволяет существенно продлить плавательный сезон.
-                  Автоматическая станция дозирования поддерживает постоянное качество воды. Бассейн
-                  имеет «римский» вход и отделан пленкой ПВХ.
+                  Уличный бассейн с павильоном. Построен на загородном участке, сдвижной павильон из поликарбоната
+                  позволяет...
                 </p>
               </div>
             </a>
 
             <a class="projects__item" href="product08.html"
-              style="background-image: url('images/content/projects__img8.jpg');">
+              style="background-image: url('images/content/product8-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
-                  08. СЕМЕЙНЫЙ БАССЕЙН В ОТДЕЛЬНО СТОЯЩЕМ ЗДАНИИ
+                  08. ДОМАШНИЙ БАССЕЙН
                   <p class="projects__more text">
                     Подробнее...
                   </p>
                 </h3>
                 <p class="projects__text-more text">
-                  Переливной бассейн для активной семьи с мелкой зоной для детей. В чаше расположены
-                  две гидромассажные зоны, два водопада и противоток, который позволяет полноценно
-                  обучаться и проводить тренировки по плаванию. Отделан мозаикой.
+                  Имеет глубину 1,5 метра. «Римская» лестница, отделанная круглой мозаикой, плавно спускается в воду...
                 </p>
               </div>
             </a>
           </div>
           <div class="projects__wrapper-item">
             <a class="projects__item" href="product09.html"
-              style="background-image: url('images/content/projects__img9.jpg');">
+              style="background-image: url('images/content/product9-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   09. БАССЕЙН В БАННОМ КОМПЛЕКСЕ
@@ -489,100 +470,88 @@
                   </p>
                 </h3>
                 <p class="projects__text-more text">
-                  Бассейн расположен в отдельно стоящем банном комплексе. В чаше смонтирован
-                  противоток и гидромассажная «пушка». Бассейн спроектирован с переменной глубиной
-                  чаши для безопасного пребывания детей. Управление аттракционами выполнено с
-                  помощью влагозащищенных пьезокнопок вынесенных в чашу. На обходной
-                  дорожке расположен регулятор температуры воды и управление насосной установкой, что
-                  сводит к минимуму необходимость пребывания в техпомещении.
+                  Расположен в отдельно стоящем банном комплексе. В чаше смонтирован противоток и гидромассажная
+                  «пушка»...
                 </p>
               </div>
             </a>
 
             <a class="projects__item" href="product10.html"
-              style="background-image: url('images/content/projects__img10.jpg');">
+              style="background-image: url('images/content/product10-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
-                  10. ДЕТСКИЙ БАССЕЙН
+                 10. БАССЕЙН ДЛЯ ОБУЧЕНИЯ ПЛАВАНИЮ
                   <p class="projects__more text">
                     Подробнее...
                   </p>
                 </h3>
                 <p class="projects__text-more text">
-                  Бассейн для обучения плаванию. Расположен в торговом центре, каркас чаши выполнен
-                  из металла и отделан пленкой ПВХ. С помощью корректно подобранного оборудования и
-                  автоматической станции дозирования поддерживается высокое качество воды.
+                  Бассейн начального уровня, для детей, расположен в торговом центре. Каркас чаши выполнен из металла и
+                  отделан пленкой ПВХ...
                 </p>
               </div>
             </a>
           </div>
           <div class="projects__wrapper-item">
             <a class="projects__item" href="product11.html"
-              style="background-image: url('images/content/projects__img11.jpg');">
+              style="background-image: url('images/content/product11-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
-                  11. БАССЕЙН - КУПЕЛЬ
+                 11. БАССЕЙН - КУПЕЛЬ
                   <p class="projects__more text">
                     Подробнее...
                   </p>
                 </h3>
                 <p class="projects__text-more text">
-                  Плиточный бассейн, построенный на берегу озера. Особенностью данного проекта
-                  является отсутствие подогрева и фильтрации. Слив и налив чаши контролируются с
-                  помощью удаленного доступа. В сочетании с русской парной дарит владельцам и их
-                  гостям невероятные ощущения.
+                 Плиточный бассейн, построенный на берегу озера. Особенностью данного проекта является отсутствие
+                 подогрева и фильтрации...
                 </p>
               </div>
             </a>
 
             <a class="projects__item" href="product12.html"
-              style="background-image: url('images/content/projects__img12.jpg');">
+              style="background-image: url('images/content/product12-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
-                  12. СЕМЕЙНЫЙ БАССЕЙН
+                  12. СПА КОМПЛЕКС НА БАЗЕ ОТДЫХА
                   <p class="projects__more text">
                     Подробнее...
                   </p>
                 </h3>
                 <p class="projects__text-more text">
-                  Чаша построена в существующем доме, для семейного пользования. Оригинальный
-                  дизайн чаши и помещения, в сочетании с баней служит центром притяжения для друзей и
-                  их детей.
+                  Проведен капитальный ремонт помещения сауны. Построены бассейн, открытая душевая, реконструированы
+                  финская сауна и комната отдыха...
                 </p>
               </div>
             </a>
           </div>
           <div class="projects__wrapper-item">
             <a class="projects__item" href="product13.html"
-              style="background-image: url('images/content/projects__img13.jpg');">
+              style="background-image: url('images/content/product13-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
-                  13. ПЛЁНОЧНЫЙ БАССЕЙН
+                  13. БАННЫЙ КОМПЛЕКС С БАССЕЙНОМ В КОТТЕДЖЕ
                   <p class="projects__more text">
                     Подробнее...
                   </p>
                 </h3>
                 <p class="projects__text-more text">
-                  Для восстановления герметичности чаши было принято решение облицевать ее пленкой
-                  ПВХ. После проведенного ремонта бассейн продолжает радовать своих хозяев и служить
-                  местом проведения притяжения и проведения тренировок по плаванию.
+                  Имеет переменную глубину. Бетонная чаша отделана пленкой ПВХ, вокруг построена деревянная терраса...
                 </p>
               </div>
             </a>
 
             <a class="projects__item" href="product14.html"
-              style="background-image: url('images/content/projects__img14.jpg');">
+              style="background-image: url('images/content/product14-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
-                  14. БАССЕЙН в частном доме
+                14. БАССЕЙН В ЧАСТНОМ ДОМЕ
                   <p class="projects__more text">
                     Подробнее...
                   </p>
                 </h3>
                 <p class="projects__text-more text">
-                  Бассейн расположен в остекленном крыле одноэтажного деревянного дома. Холодными
-                  зимними вечерами позволяет расслабиться в теплой воде после лыжных прогулок или
-                  активного отдыха
+                 Расположен в остекленном крыле одноэтажного деревянного дома...
                 </p>
               </div>
             </a>
