--- a/app/index.html
+++ b/app/index.html
@@ -319,7 +319,7 @@
               </div>
               <p class="company__item-text text">
                 Предоставляем качественные услуги по строительству, проектированию, реконструкции и
-                обслуживанию бассейнов
+                обслуживанию бассейнов.
               </p>
             </div>
 
@@ -330,8 +330,8 @@
                 ВЫПОЛНЕННЫХ ПРОЕКТОВ
               </div>
               <p class="company__item-text text">
-                Строим бассейны «под ключ» - начиная от идеи и проектирования, заканчивая строительством бассейна и
-                заключение договора на сервисное обслуживание
+                Строим «под ключ» - начиная от идеи и проектирования, заканчивая строительством бассейна и заключением
+                договора на сервисное обслуживание.
               </p>
             </div>
 
@@ -343,7 +343,7 @@
               </div>
               <p class="company__item-text text">
                 Сотрудничество с нами приносит только положительные эмоции, так как нам важно наилучшим способом
-                воплотить все ваши идеи в жизнь.
+                воплотить все Ваши идеи в жизнь.
               </p>
             </div>
           </div>
@@ -361,7 +361,7 @@
         </h2>
         <p class="spec__text subtitle text">
           Специалисты компании «Линия Воды» сосредоточены не на выполнении «плана продаж», а на качестве выполняемых
-          работ. Для нас важно, на каждом этапе выполнить свою работу наилучшим образом и дать твердую гарантию на
+          работ. Для нас важно на каждом этапе выполнить свою работу наилучшим образом и дать твердую гарантию на
           результат своих работ.
         </p>
 
@@ -441,18 +441,18 @@
                 Уникальное предложение
               </div>
               <p class="benefits__text text">
-                Только для наших клиентов: при заключении договора на сервисное обслуживание построенного нами бассейна
-                даем +1 год к гарантии
+               Только для наших клиентов: при заключении договора на сервисное обслуживание построенного нами бассейна
+               даем +1 год к гарантии.
               </p>
             </div>
 
             <div class="benefits__item">
               <div class="benefits__subtitle">
-                Наилучшее решение для вас
+                Наилучшее решение для Вас
               </div>
               <p class="benefits__text text">
                 Мы не являемся продавцами оборудования. То есть мы не ограничиваемся «собственным» ассортиментом и
-                подберем для вас самый оптимальный вариант, из предлагаемого на рынке оборудования и материалов.
+                подберем для Вас самый оптимальный вариант из предлагаемого на рынке оборудования и материалов.
               </p>
             </div>
 
@@ -461,7 +461,7 @@
                 Проект в подарок
               </div>
               <p class="benefits__text text">
-                При заказе бассейна «под ключ» стоимость разработки проекта идет в зачет стоимости оборудования
+                При заказе «под ключ» стоимость разработки проекта идет в зачет стоимости оборудования.
               </p>
             </div>
 
@@ -470,7 +470,7 @@
                 Фиксированная стоимость
               </div>
               <p class="benefits__text text">
-                В договоре прописываем и соблюдаем точные сроки и фиксированную стоимость выполнения работ
+                В договоре прописываем и соблюдаем точные сроки и фиксированную стоимость выполнения работ.
               </p>
             </div>
 
@@ -481,9 +481,8 @@
                 и расчет стоимости
               </div>
               <p class="benefits__text text">
-                Наш специалист приедет к вам на объект и подробно проконсультирует по любым вопросам, связанным со
-                строительством бассейна и не только, а так же бесплатно произведет замеры и расчёт стоимости будущего
-                объекта.
+                Наш специалист приедет к Вам на объект и подробно проконсультирует по любым вопросам, связанным со
+                строительством и не только, а также бесплатно произведет замеры и расчёт стоимости будущего объекта.
               </p>
             </div>
 
@@ -493,7 +492,7 @@
               </div>
               <p class="benefits__text text">
                 Наша цель – оказание качественных услуг. Мы заинтересованы в предложении оптимального решения в рамках
-                требований заказчики и заложенного бюджета
+                требований заказчики и заложенного бюджета.
               </p>
             </div>
 
@@ -510,47 +509,44 @@
 
       <section class="projects section">
         <h2 class="projects__title title">
-          галерея работ
+          ГАЛЕРЕЯ РАБОТ
         </h2>
         <p class="projects__text subtitle text">
-          В галерее наших работ Вы можете ознакомиться с проектами, реализованными нашей компанией, каждым из которых мы
-          по праву гордимся.
+         В галерее работ Вы можете ознакомиться с некоторыми проектами, реализованными нашей компанией, каждым из
+         которых мы праву гордимся.
         </p>
 
         <div class="projects__inner">
 
           <div class="projects__wrapper-item">
-            <a class="projects__item" href="product08.html"
-              style="background-image: url('images/content/projects__img8.jpg');">
+            <a class="projects__item" href="product01.html"
+              style="background-image: url('images/content/product1-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
-                  08. СЕМЕЙНЫЙ БАССЕЙН В ОТДЕЛЬНО СТОЯЩЕМ ЗДАНИИ
+                  01. СЕМЕЙНЫЙ БАССЕЙН В ОТДЕЛЬНО СТОЯЩЕМ ЗДАНИИ
                   <p class="projects__more text">
                     Подробнее...
                   </p>
                 </h3>
 
                 <p class="projects__text-more text">
-                  Переливной бассейн для активной семьи с мелкой зоной для детей. В чаше расположены
-                  две гидромассажные зоны, два водопада и противоток, который позволяет полноценно
-                  обучаться и проводить тренировки по плаванию. Отделан мозаикой.
+                  Переливной бассейн для активной семьи с мелкой зоной для детей. В чаше расположены две гидромассажные
+                  зоны...
                 </p>
               </div>
             </a>
 
             <a class="projects__item" href="product04.html"
-              style="background-image: url('images/content/projects__img4.jpg');">
+              style="background-image: url('images/content/product4-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
-                  04. БАННЫЙ КОМПЛЕКС С БАССЕЙНОМ В КОТТЕДЖЕ
+                  04. ПЛЁНОЧНЫЙ БАССЕЙН
                   <p class="projects__more text">
                     Подробнее...
                   </p>
                 </h3>
                 <p class="projects__text-more text">
-                  Бассейн имеет переменную глубину. Бетонная чаша бассейна отделана пленкой ПВХ,
-                  вокруг построена деревянная терраса. Оборудование расположено в техническом
-                  помещении выше уровня воды.
+                  Для восстановления герметичности чаши было принято решение облицевать ее пленкой ПВХ...
                 </p>
               </div>
             </a>
@@ -560,7 +556,7 @@
 
           <div class="projects__wrapper-item">
             <a class="projects__item" href="product02.html"
-              style="background-image: url('images/content/projects__img2.jpg');">
+              style="background-image: url('images/content/product2-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   02. МОЗАИЧНЫЙ БАССЕЙН С ДЖАКУЗИ
@@ -570,27 +566,24 @@
                 </h3>
 
                 <p class="projects__text-more text">
-                  Бассейн отделан белоснежной мозаикой и имеет «римский» вход. Конструкция чаши
-                  отлита по разработанному проекту одновременно с бетонированием фундамента здания.
-                  Оборудование бассейна вместе с переливной емкостью расположено в техническом этаже
-                  дома.
+                  Отделан белоснежной мозаикой и имеет «римский» вход. Конструкция чаши отлита по разработанному
+                  проекту...
                 </p>
 
               </div>
             </a>
             <a class="projects__item" href="product10.html"
-              style="background-image: url('images/content/projects__img10.jpg');">
+              style="background-image: url('images/content/product10-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
-                  10. ДЕТСКИЙ БАССЕЙН
+                  10. БАССЕЙН ДЛЯ ОБУЧЕНИЯ ПЛАВАНИЮ
                   <p class="projects__more text">
                     Подробнее...
                   </p>
                 </h3>
                 <p class="projects__text-more text">
-                  Бассейн для обучения плаванию. Расположен в торговом центре, каркас чаши выполнен
-                  из металла и отделан пленкой ПВХ. С помощью корректно подобранного оборудования и
-                  автоматической станции дозирования поддерживается высокое качество воды.
+                  Бассейн начального уровня, для детей, расположен в торговом центре. Каркас чаши выполнен из металла и
+                  отделан пленкой ПВХ...
                 </p>
               </div>
             </a>
@@ -628,40 +621,20 @@
                 </div>
 
                 <p class="questions__item-text text">
-                  Для того чтобы понять, какая отделка бассейн подойдёт именно вам - предлагаем ознакомиться с
+                  Для того чтобы понять, какая отделка бассейн подойдёт именно Вам - предлагаем ознакомиться с
                   различными
                   вариантами
                   на страницах нашего сайта:
-                  <a class="questions__item-link" href="pvc.html">мозаичный бассейн</a>,
-                  <a class="questions__item-link" href="mosaic.html">пленочный бассейн</a>,
+                  <a class="questions__item-link" href="pvc.html">пленочный бассейн</a>,
+                  <a class="questions__item-link" href="mosaic.html">мозаичный бассейн</a>,
                   <br>
                   <br>
                   или
                   <span data-modal class="questions__item-link">оставить заявку на
-                    бесплатную консультацию</span>
+                    бесплатную консультацию.</span>
                 </p>
               </div>
 
-            </div>
-
-            <div class="questions__item global__item-bg">
-              <div class="questions__item-inners">
-                <div class="questions__item-title">
-                  <p class="questions__item-title--text">
-                    Какие гарантии вы даёте на вашу работу?
-                  </p>
-                  <div class="questions__item-wrapper">
-                    <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
-                    <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
-                  </div>
-                </div>
-                <p class="questions__item-text text">
-                  Мы даем гарантию на всю нашу работу 2 года,
-                  <br>
-                  <br>
-                  +1 год при заключении сервисного договора.
-                </p>
-              </div>
             </div>
 
             <div class="questions__item global__item-bg">
@@ -676,11 +649,25 @@
                   </div>
                 </div>
                 <p class="questions__item-text text">
-                  Что бы сделать предварительный расчет нам потребуется:
-                  <br>
-                  <br>
-                  Для Вашего удобства мы можем бесплатно приехать на ваш объект, провести замеры оказать услуги по
-                  предварительной консультации
+                  Для Вашего удобства мы можем бесплатно приехать на объект, провести замеры и расчёт стоимости, а также
+                  оказать услуги по предварительной консультации.
+                </p>
+              </div>
+            </div>
+
+            <div class="questions__item global__item-bg">
+              <div class="questions__item-inners">
+                <div class="questions__item-title">
+                  <p class="questions__item-title--text">
+                    Какие гарантии вы даёте на вашу работу?
+                  </p>
+                  <div class="questions__item-wrapper">
+                    <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
+                    <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+                  </div>
+                </div>
+                <p class="questions__item-text text">
+                  Мы даем гарантию на всю нашу работу 2 года, +1 год при заключении сервисного договора.
 
                 </p>
               </div>
@@ -701,7 +688,7 @@
                   Мы не являемся производителем и продавцами оборудования.
                   <br>
                   То есть не ограничиваемся «собственным»
-                  ассортиментом и подберем для вас наилучший и оптимальный вариант
+                  ассортиментом и подберем для вас наилучший и оптимальный вариант.
                 </p>
               </div>
             </div>
@@ -719,8 +706,7 @@
                 </div>
                 <p class="questions__item-text text">
                   Реализуем проект полного цикла — начиная от идеи и копки котлована, до проведения пусконаладочных
-                  работ
-                  и сдачи Заказчику.
+                  работ и сдачи заказчику.
                 </p>
               </div>
             </div>
