--- a/app/jobs.html
+++ b/app/jobs.html
@@ -308,17 +308,14 @@
                 ВАКАНСИИ
               </h1>
               <p class="start__text text">
-                ООО «Линия Воды» – компания осуществляющая полный цикл работ по проектированию
+                ООО «Линия Воды» – компания, осуществляющая полный цикл работ по проектированию
                 <br>
-                строительству и отделке,
-                монтажу оборудования, и сервисному обслуживанию бассейнов.
-                <br> Мы предоставляем высокотехнологичные решения
-                с 2012 года.
+                строительству и отделке, монтажу оборудования и сервисному обслуживанию бассейнов.
+                <br> Мы предоставляем высокотехнологичные решения с 2012 года.
                 <br>
-                Наша специализация - частные объекты с неограниченной функциональной сложностью. <br>
+                Наша специализация - частные объекты, с неограниченной функциональной сложностью.<br>
                 Основным приоритетом в кадровом вопросе является возможность обучения специалистов и <br> возможность
-                роста
-                внутри компании.
+                роста внутри компании.
               </p>
             </div>
           </div>
@@ -339,13 +336,13 @@
                 <div class="jobs__info-title">
                   <img class="jobs__info-img" src="images/icons/man.png" alt="">
                   <h4 class="jobs__info-name">
-                    Монтажник технологического оборудования:
+                   Монтажник технологического оборудования
                   </h4>
                 </div>
 
                 <div class="jobs__info__wrapper">
                   <p class="jobs__info-text text">
-                    Для выездной работы на объектах Компании приглашаем на работу учеников и монтажников бассейнового
+                    Для выездной работы на объектах компании приглашаем на работу учеников и монтажников бассейнового
                     оборудования.
                   </p>
                   <a class="global__btn-contact global-btn main-btn" href="jobs01.html">
@@ -362,14 +359,14 @@
                 <div class="jobs__info-title">
                   <img class="jobs__info-img" src="images/icons/man.png" alt="">
                   <h4 class="jobs__info-name">
-                    Инженер-строитель
+                   Инженер - строитель
                   </h4>
                 </div>
 
                 <div class="jobs__info__wrapper">
                   <p class="jobs__info-text text">
-                    Для курирования проведения работ на объектах Компании - бассейнах и СПА комплексах, расположенных
-                    в Санкт-Петербурге и Ленобласти, приглашаем на работу Инженера-строителя.
+                    Для курирования и проведения работ на объектах компании - бассейнах и СПА комплексах, расположенных
+                    в Санкт-Петербурге и Ленобласти, приглашаем на работу инженера-строителя.
                   </p>
                   <a class="global__btn-contact global-btn main-btn" href="jobs02.html">
                     подробнее
@@ -393,8 +390,9 @@
                   <p class="jobs__info-text text">
                     Инженера-электронщика в отдел разработки электроники и встраиваемого ПО
                     Вы будете участвовать в проектах по разработке отечественной линейки систем управления силовым и
-                    измерительным оборудованием, а так же средств автоматизации на базе микроконтроллеров и
+                    измерительным оборудованием, а также средств автоматизации на базе микроконтроллеров и
                     микропроцессоров.
+
 
                   </p>
                   <a class="global__btn-contact global-btn main-btn" href="jobs03.html">
