--- a/app/jobs01.html
+++ b/app/jobs01.html
@@ -312,8 +312,7 @@
                 Монтажник технологического оборудования:
               </h1>
               <p class="start__text text">
-                Для выездной работы на объектах компании приглашаем на работу учеников и монтажников бассейнового
-                оборудования.
+                Для выездной работы на объектах компании приглашаем учеников и монтажников бассейнового оборудования.
               </p>
             </div>
           </div>
@@ -333,7 +332,7 @@
               • Сборка систем водоподготовки; <br>
               • Монтаж сетей водо- и теплоснабжения; <br>
               • Пусконаладочные работы всего комплекса оборудования; <br>
-              • Ремонтные работы и сервисное обслуживание;
+              • Ремонтные работы и сервисное обслуживание.
 
             </p>
           </div>
@@ -343,13 +342,13 @@
               Условия работы:
             </h3>
             <p class="employee__text text">
-              • Работа как составе бригады монтажников так и самостоятельно на объектах в Санкт-Петербурге и
+              • Работа, как в составе бригады монтажников так и самостоятельно на объектах в Санкт-Петербурге и
               Ленобласти<br>
               под руководством инженера компании;<br>
               • Рабочий день не нормирован;<br>
               • Обучение внутри компании;<br>
               • Компенсация ГСМ;<br>
-              • Оплата труда сдельная;
+              • Оплата труда сдельная.
 
             </p>
           </div>
@@ -363,7 +362,7 @@
               • Умение читать чертежи и электрические схемы;<br>
               • Наличие водительского удостоверения и автомобиля обязательно;<br>
               • Способность к обучению;<br>
-              • Ответственность и аккуратность;
+              • Ответственность и аккуратность.
 
 
             </p>
@@ -375,7 +374,7 @@
             </h3>
             <p class="employee__text text">
               • Опыт работы в бассейновой отрасли; <br>
-              • Навыки по монтажу и настройке автоматики и электрического оборудования;
+              • Навыки по монтажу и настройке автоматики и электрического оборудования.
 
 
             </p>
