--- a/app/jobs02.html
+++ b/app/jobs02.html
@@ -327,12 +327,12 @@
             <p class="employee__text text">
               • Участие в разработке проектов и составлении смет по новым объектам; <br>
               • Руководство полным циклом строительных, ремонтных и монтажных работ на
-              объектах Компании; <br>
+              объектах компании; <br>
               • Проведение инструктажа и обучения монтажников;<br>
               • Участие в монтаже и настройке автоматики и электрического оборудования на
               объектах;<br>
               • Участие в пусконаладочных работах и сдаче объектов;<br>
-              • Работа с отчетной документацией;
+              • Работа с отчетной документацией.
 
             </p>
           </div>
@@ -347,7 +347,7 @@
               • Компенсация ГСМ;<br>
               • Корпоративная сотовая связь;<br>
               • Обучение внутри компании, а также участие в выездных семинарах;<br>
-              • Оплата труда: оклад плюс бонус от закрытых объемов смет;
+              • Оплата труда: оклад плюс бонус от закрытых объемов смет.
 
             </p>
           </div>
@@ -359,11 +359,11 @@
             <p class="employee__text text">
              • Высшее техническое образование;<br>
              • Опыт руководства и проведения строительных работ;<br>
-             • Умение читать и составлять чертежи и электрические схемы;<br>
+             • Умение читать и составлять чертежи, и электрические схемы;<br>
              • Наличие водительского удостоверения и автомобиля обязательно;<br>
              • Уверенный пользователь ПК, знание и опыт работы в любой из CAD программ;<br>
              • Способность к обучению;<br>
-             • Способность принимать самостоятельные решения и ответственность;
+             • Способность принимать самостоятельные решения и ответственность.
 
 
             </p>
