--- a/app/jobs03.html
+++ b/app/jobs03.html
@@ -337,7 +337,7 @@
               •Разработка документации;<br>
               •Участие в испытаниях, работа с контрольно-измерительной аппаратурой;<br>
               •Отладка созданных устройств;<br>
-              •Поддержка и модификация существующих микропрограмм;
+              •Поддержка и модификация существующих микропрограмм.
 
             </p>
           </div>
@@ -349,7 +349,7 @@
             <p class="employee__text text">
               •Характер работы - в офисе компании;<br>
               •Обучение внутри компании, а также участие в выездных семинарах;<br>
-              •Оплата труда: по результатам собеседования;<br>
+              •Оплата труда: по результатам собеседования.<br>
 
             </p>
           </div>
@@ -366,7 +366,7 @@
               ядра ARMv7, ARMv9;<br>
               •Опыт разработки кода с использованием операционных систем Linux, FreeRTOS;<br>
               •Знание языков программирования С/С++;<br>
-              •Продвинутые навыки работы в среде Altium Designer;
+              •Продвинутые навыки работы в среде Altium Designer.
 
 
             </p>
@@ -384,7 +384,7 @@
               DDR3);<br>
               •Опыт реализации проектов на микроконтроллерах STM32 или прочих
               схемотехнических решений;<br>
-              •Опыт самостоятельной разработки электроники в виде хобби;
+              •Опыт самостоятельной разработки электроники в виде хобби.
 
             </p>
           </div>
