--- a/app/mosaic.html
+++ b/app/mosaic.html
@@ -315,7 +315,7 @@
                 </div>
               </h1>
               <div class="devscreen__text text">
-                Мозаичное покрытие чаши - это классика проверенная временем!
+               Мозаичное покрытие чаши - это классика, проверенная временем!
               </div>
               <div data-modal class="devscreen__btn global-btn global__btn-contact main-btn">
                 узнать про услугу
@@ -336,11 +336,10 @@
                 1. ШТУКАТУРКА
               </h3>
               <div class="stages__item__text text">
-                Для данного вида отделки подходят исключительно железобетонные монолитные чаши. После
-                отливки бетону необходимо придать идеальные, ровные формы, заложенные в проекте. Для
-                этого чашу необходимо оштукатурить. Для того чтобы штукатурка не трескалась и не отслаивалась
-                от бетона под отделочными слоями необходимо строгое соблюдение технологии на каждом
-                этапе.
+                Для данного вида отделки подходят исключительно железобетонные монолитные чаши. После отливки бетону
+                необходимо придать идеальные ровные формы, заложенные в проекте. Для этого чашу необходимо оштукатурить.
+                Для того чтобы штукатурка не трескалась и не отслаивалась от бетона под отделочными слоями, необходимо
+                строгое соблюдение технологии на каждом этапе.
               </div>
             </div>
             <div class="stages__item">
@@ -348,9 +347,9 @@
                 2. УСТАНОВКА ЗАКЛАДНЫХ ЭЛЕМЕНТОВ
               </h3>
               <div class="stages__item__text text">
-                После выравнивания чаши, в заранее оставленные ниши, устанавливаются закладные детали и
-                заливаются анкеровочным раствором. Такой способ монтажа позволяет получить идеальные
-                поверхности строящегося бассейна.
+                После выравнивания чаши, в заранее оставленные ниши, устанавливаются закладные детали и заливаются
+                анкеровочным раствором. Такой способ монтажа позволяет получить идеальные поверхности строящегося
+                бассейна.
               </div>
             </div>
 
@@ -359,13 +358,11 @@
                 3. ГИДРОИЗОЛЯЦИЯ
               </h3>
               <div class="stages__item__text text">
-                На данном этапе на поверхность наносится слой гидроизоляции которая обладает
-                исключительной адгезией к штукатурке и в то же время эластичностью – она будет способна
-                сохранить герметичность чаши даже при образовании небольших трещин. Это самый ответственный этап,
-                который требует аккуратности и да, да - соблюдения технологии. Наши
-                специалисты выполнили не один десяток объектов, но продолжают проходить регулярное
-                обучение. После завершения работ по гидроизоляции, как правило проводятся испытания –
-                опрессовка чаши.
+                На данном этапе на поверхность наносится слой гидроизоляции, которая обладает исключительной адгезией к
+                штукатурке и, в то же время, эластичностью – она будет способна сохранить герметичность чаши даже при
+                образовании небольших трещин. Это самый ответственный этап, который требует аккуратности и соблюдения
+                технологии. Наши специалисты выполнили не один десяток объектов, но продолжают проходить регулярное
+                обучение. После завершения работ по гидроизоляции, как правило, проводятся испытания – опрессовка чаши.
               </div>
             </div>
 
@@ -374,11 +371,10 @@
                 4. УКЛАДКА МОЗАИКИ ИЛИ ПЛИТКИ
               </h3>
               <div class="stages__item__text text">
-                Так как стеклянная мозаика обладает нулевым коэффициентом водопоглощения, то для ее
-                приклейки используются специальные цементные клея с улучшенными характеристиками.
-                Мозаика укладывается на тонкий слой клея в два миллиметра и тщательно выравнивается
-                Мастерами во всех направлениях. Особое внимание уделяется всевозможным стыкам, углам и
-                скруглениям.
+                Так как стеклянная мозаика обладает нулевым коэффициентом водопоглощения, то для её приклейки
+                используются специальные цементные клея с улучшенными характеристиками. Мозаика укладывается на тонкий
+                слой клея в два миллиметра и тщательно выравнивается мастерами во всех направлениях. Особое внимание
+                уделяется всевозможным стыкам, углам и скруглениям.
               </div>
             </div>
 
@@ -387,9 +383,8 @@
                 5. ЗАТИРКА
               </h3>
               <div class="stages__item__text text">
-                Это финальный и один из самых ответственных этапов. Несмотря на то, что затирка не является
-                гидроизоляционным слоем, от качества ее укладки зависит окончательный внешний вид бассейна
-                по прошествии долгих лет.
+                Этот финальный этап является так же одним из самых ответственных. От качества ее укладки зависит
+                окончательный внешний вид бассейна, который сохранится на долгие годы.
               </div>
             </div>
           </div>
@@ -412,6 +407,7 @@
               <p class="benefits__text text">
                 При качественной укладке покрытия из мозаики или специализированной плитки могут служить
                 долгие годы, не теряя своих качеств и внешнего вида.
+
               </p>
             </div>
 
@@ -422,6 +418,7 @@
               <p class="benefits__text text">
                 Бассейн из мозаики сохранит первоначальный внешний вид и яркость цветов на протяжении
                 длительного времени.
+
               </p>
             </div>
 
@@ -430,8 +427,9 @@
                 ИНДИВИДУАЛЬНОСТЬ
               </div>
               <p class="benefits__text text">
-                Огромная гамма расцветок, форм и фактур разных производителей позволит реализовать самые
+                Огромная палитра расцветок, форм и фактур разных производителей позволит реализовать самые
                 смелые дизайнерские решения.
+
               </p>
             </div>
 
@@ -441,7 +439,8 @@
               </div>
               <p class="benefits__text text">
                 Мозаика невосприимчива к воздействию химических веществ, применяемых в процессе
-                регулярной чистки бассейнов. Полностью безопасна для здоровья человека и окружающей среды.
+                регулярной чистки бассейнов и полностью безопасна для здоровья человека и окружающей среды.
+
               </p>
             </div>
 
@@ -463,15 +462,15 @@
           галерея работ
         </h2>
         <p class="projects__text subtitle text">
-          В галерее наших работ Вы можете ознакомиться с проектами, реализованными нашей компанией, каждым из которых мы
-          по праву гордимся.
+          В галерее работ Вы можете ознакомиться с некоторыми проектами, реализованными нашей компанией, каждым из
+          которых мы праву гордимся.
         </p>
 
         <div class="projects__inner">
 
           <div class="projects__wrapper-item">
             <a class="projects__item" href="product02.html"
-              style="background-image: url('images/content/projects__img2.jpg');">
+              style="background-image: url('images/content/product2-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   02. МОЗАИЧНЫЙ БАССЕЙН С ДЖАКУЗИ
@@ -481,27 +480,23 @@
                 </h3>
 
                 <p class="projects__text-more text">
-                  Бассейн отделан белоснежной мозаикой и имеет «римский» вход. Конструкция чаши
-                  отлита по разработанному проекту одновременно с бетонированием фундамента здания.
-                  Оборудование бассейна вместе с переливной емкостью расположено в техническом этаже
-                  дома.
+                  Отделан белоснежной мозаикой и имеет «римский» вход. Конструкция чаши отлита по разработанному
+                  проекту...
                 </p>
               </div>
             </a>
 
             <a class="projects__item" href="product08.html"
-              style="background-image: url('images/content/projects__img8.jpg');">
+              style="background-image: url('images/content/product8-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
-                  08. СЕМЕЙНЫЙ БАССЕЙН В ОТДЕЛЬНО СТОЯЩЕМ ЗДАНИИ
+                  08. ДОМАШНИЙ БАССЕЙН
                   <p class="projects__more text">
                     Подробнее...
                   </p>
                 </h3>
                 <p class="projects__text-more text">
-                  Переливной бассейн для активной семьи с мелкой зоной для детей. В чаше расположены
-                  две гидромассажные зоны, два водопада и противоток, который позволяет полноценно
-                  обучаться и проводить тренировки по плаванию. Отделан мозаикой.
+                  Имеет глубину 1,5 метра. «Римская» лестница, отделанная круглой мозаикой, плавно спускается в воду...
                 </p>
               </div>
             </a>
@@ -511,7 +506,7 @@
 
           <div class="projects__wrapper-item">
             <a class="projects__item" href="product09.html"
-              style="background-image: url('images/content/projects__img9.jpg');">
+              style="background-image: url('images/content/product9-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   09. БАССЕЙН В БАННОМ КОМПЛЕКСЕ
@@ -521,27 +516,24 @@
                 </h3>
 
                 <p class="projects__text-more text">
-                  Бассейн расположен в отдельно стоящем банном комплексе. В чаше смонтирован
-                  противоток и гидромассажная «пушка». Бассейн спроектирован с переменной глубиной
-                  чаши для безопасного пребывания детей. Управление аттракционами выполнено с
-                  помощью влагозащищенных пьезокнопок вынесенных в чашу.
+                  Бассейн расположен в отдельно стоящем банном комплексе. В чаше смонтирован противоток и гидромассажная
+                  «пушка»...
                 </p>
 
               </div>
             </a>
             <a class="projects__item" href="product12.html"
-              style="background-image: url('images/content/projects__img12.jpg');">
+              style="background-image: url('images/content/product12-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
-                  12. СЕМЕЙНЫЙ БАССЕЙН
+                  12. СПА КОМПЛЕКС НА БАЗЕ ОТДЫХА
                   <p class="projects__more text">
                     Подробнее...
                   </p>
                 </h3>
                 <p class="projects__text-more text">
-                  Чаша построена в существующем доме, для семейного пользования. Оригинальный
-                  дизайн чаши и помещения, в сочетании с баней служит центром притяжения для друзей и
-                  их детей.
+                  Проведен капитальный ремонт помещения сауны. Построены бассейн, открытая душевая, реконструированы
+                  финская сауна и комната отдыха...
                 </p>
               </div>
             </a>
@@ -570,7 +562,7 @@
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
-                    Какие существуют виды мозаики и плитки для бассейнов?
+                    ВОЗМОЖЕН ЛИ ИНДИВИДУАЛЬНЫЙ РИСУНОК?
                   </p>
                   <div class="questions__item-wrapper">
                     <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -579,17 +571,9 @@
                 </div>
 
                 <p class="questions__item-text text">
-                  Самый популярный вариант- это стекло,
-                  <a class="questions__item-link" href="mosaic.html">плитки </a>
-                  могут быть прозрачными или окрашенными в
-                  массе. Также для отделки чаши может использоваться клинкер или керамогранит -
-                  <a class="questions__item-link" href="mosaic.html">глиняные
-                    плитки</a>
-                  , запеченные при высокой температуре и давлении. В любом случае в бассейне можно
-                  применять только плитку с низким водопоглощением и повышенной стойкостью к постоянному
-                  воздействию окислителей присутствующих в воде бассейна.
-
-
+                  Да. Возможно сделать оригинальную раскладку мозаики на вашей чаше или набрать индивидуальное панно по
+                  вашему эскизу. Полную визуализацию готовой чаши можно получить на стадии
+                  <a class="questions__item-link" href="design.html">проектирования</a>.
                 </p>
               </div>
             </div>
@@ -598,7 +582,7 @@
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
-                    Возможен ли индивидуальный рисунок?
+                    КАКИЕ СУЩЕСТВУЮТ ВИДЫ МОЗАИКИ И ПЛИТКИ ДЛЯ БАССЕЙНОВ?
                   </p>
                   <div class="questions__item-wrapper">
                     <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -606,7 +590,17 @@
                   </div>
                 </div>
                 <p class="questions__item-text text">
-                  Да, возможен набор панно по вашему эскизу.
+                  Самый популярный вариант - это стекло. Плитки могут быть прозрачными или окрашенными в массе. 
+                  <br>
+                  <br>
+                  Также
+                  для отделки чаши может использоваться клинкер или керамогранит - глиняные плитки, запеченные при
+                  высокой температуре и давлении.
+                  <br>
+                  <br>
+                  В любом случае в бассейне можно применять только плитку с низким
+                  водопоглощением и повышенной стойкостью к постоянному воздействию окислителей присутствующих в воде
+                  бассейна.
                 </p>
               </div>
             </div>
@@ -615,7 +609,7 @@
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
-                    Какие сроки производства работ?
+                    КАКИЕ СРОКИ ПРОИЗВОДСТВА РАБОТ?
                   </p>
                   <div class="questions__item-wrapper">
                     <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -627,7 +621,7 @@
                   ответственности и обязательного соблюдения всех технических регламентов производителей материалов.
                   <br>
                   <br>
-                  Зато результат будет радовать вас долгие годы!
+                  Зато результат будет радовать Вас долгие годы!
                 </p>
               </div>
             </div>
@@ -636,7 +630,7 @@
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
-                    Какие еще могут быть варианты кроме мозаики?
+                    КАКИЕ ЕЩЕ МОГУТ БЫТЬ ВАРИАНТЫ, КРОМЕ МОЗАИКИ?
                   </p>
                   <div class="questions__item-wrapper">
                     <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -655,7 +649,7 @@
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
-                    Какие затирки используются для швов?
+                    ККАКИЕ ЗАТИРКИ ИСПОЛЬЗУЮТСЯ ДЛЯ ШВОВ?
                   </p>
                   <div class="questions__item-wrapper">
                     <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -663,10 +657,8 @@
                   </div>
                 </div>
                 <p class="questions__item-text text">
-                  Для бассейнов мы рекомендуем использование эпоксидной затирки, которая обеспечивает
-                  необходимую прочность, отсутствие пор и самое главное превосходную химическую
-                  устойчивость.
-
+                  Для бассейнов мы рекомендуем использование эпоксидной затирки, которая обеспечивает необходимую
+                  прочность, отсутствие пор и самое главное превосходную химическую устойчивость.
                 </p>
               </div>
             </div>
