--- a/app/news.html
+++ b/app/news.html
@@ -305,9 +305,9 @@
                 новости компании
               </h1>
               <p class="start__text text">
-                В этом разделе вы можете более подробно познакомиться с нашими работами или найти ответы на
+                В этом разделе Вы можете более подробно познакомиться с нашими работами или найти ответы
                 <br> интерсующие
-                Вас вопросы
+                Вас вопросы.
               </p>
             </div>
           </div>
@@ -329,8 +329,7 @@
                 <div class="news__date text">01.05.2022</div>
                 <p class="news__text text">
                   Недавно к нам обратился заказчик – основная проблема разрушение существующего мозаичного покрытия
-                  железобетонной чаши.
-                  При обследовании чаши были выявлены следующие моменты:
+                  железобетонной чаши. При обследовании чаши были выявлены следующие моменты...
                        
                 </p>
               </div>
