--- a/app/product01.html
+++ b/app/product01.html
@@ -310,7 +310,7 @@
             </div>
             <div class="start__wrapper">
               <h1 class="start__title">
-                01. ДОМАШНИЙ БАССЕЙН
+                01. СЕМЕЙНЫЙ БАССЕЙН В ОТДЕЛЬНО СТОЯЩЕМ ЗДАНИИ
               </h1>
 
             </div>
@@ -348,23 +348,17 @@
               <div class="product1">
                 <div class="product1-img" style="background-image: url('images/content/product1-7.jpg');"></div>
               </div>
-              <div class="product1">
-                <div class="product1-img" style="background-image: url('images/content/product1-8.jpg');"></div>
-              </div>
-              <div class="product1">
-                <div class="product1-img" style="background-image: url('images/content/product1-9.jpg');"></div>
-              </div>
             </div>
 
             <div class="product__box">
               <p class="product__text text">
-                Бассейн имеет глубину 1,5 метра. «Римская» лестница, отделанная круглой мозаикой,
-                плавно спускается в воду. Бассейн оборудован автоматической станцией дозирования
-                химреагентов. Подогрев воды организован от газового котла.
-                Чаша выполнена из бетона. <br>
-                Скиммерная схема фильтрации. <br>
-                Дезинфекция выполняется при помощи автоматической станции дозирования. <br>
-                Из аттракционов установлены: гейзер, противоток, водопад и подсветка.
+                Переливной бассейн для активной семьи с мелкой зоной для детей. В чаше расположены две гидромассажные
+                зоны, два водопада и противоток, который позволяет полноценно обучаться и проводить тренировки по
+                плаванию. Чаша выполнена из бетона и отделана мозаикой.
+                Скиммерная схема фильтрации.
+                Дезинфекция выполняется при помощи ультразвукового излучателя.
+                Из аттракционов установлены: противоток, гидромассаж и подвотная подсветка.
+
               </p>
               <div class="product__inner">
                 <ul class="product__inners">
@@ -372,7 +366,7 @@
                     Длина
                   </li>
                   <li class="product__descr">
-                    6,0 метра
+                    8,0 м
                   </li>
                 </ul>
                 <ul class="product__inners">
@@ -380,7 +374,7 @@
                     Ширина
                   </li>
                   <li class="product__descr">
-                    3,5 метра
+                    4,0м
                   </li>
                 </ul>
                 <ul class="product__inners">
@@ -388,7 +382,7 @@
                     Глубина
                   </li>
                   <li class="product__descr">
-                    1,1 - 1,7 метра
+                    1,2 – 1,8 м
                   </li>
                 </ul>
 
@@ -400,14 +394,7 @@
                     мозаика
                   </li>
                 </ul>
-                <ul class="product__inners">
-                  <li class="product__feature">
-                    Фильтрация
-                  </li>
-                  <li class="product__descr">
-                    скиммерная схема
-                  </li>
-                </ul>
+                
 
 
                 <ul class="product__inners">
@@ -415,7 +402,7 @@
                     Сдача объекта
                   </li>
                   <li class="product__descr">
-                    май 2019
+                    февраль 2022
                   </li>
                 </ul>
                 <ul class="product__inners">
@@ -424,7 +411,7 @@
 
                   </li>
                   <li class="product__descr">
-                    1 149 000 руб
+                    6 392 000 руб.
                   </li>
                 </ul>
               </div>
@@ -469,19 +456,7 @@
                   <img class="product2-img" src="images/content/product1-7.jpg" alt="">
                 </div>
               </div>
-              <div class="product2">
-                <div class="product2-wrapper">
-                  <img class="product2-img" src="images/content/product1-8.jpg" alt="">
-                </div>
-              </div>
-              <div class="product2">
-                <div class="product2-wrapper">
-                  <img class="product2-img" src="images/content/product1-9.jpg" alt="">
-                </div>
-              </div>
-
-
-
+           
             </div>
 
             <button class="slick-arrow slick-prev">
@@ -504,7 +479,7 @@
             <a class="global__btn-contact main-btn global-btn" href="gallery.html">
               Вернуться в галерею
             </a>
-            <a class="global__btn-contact main-btn global-btn product__btn" href="gallery.html">
+            <a class="global__btn-contact main-btn global-btn product__btn" href="product02.html">
               следующий проект
             </a>
           </div>
