--- a/app/product02.html
+++ b/app/product02.html
@@ -278,6 +278,10 @@
     </div>
   </header>
 
+
+
+
+
   <div class="wrapper">
     <main class="main">
       <section class="start">
@@ -306,8 +310,7 @@
             </div>
             <div class="start__wrapper">
               <h1 class="start__title">
-               02.
-               МОЗАИЧНЫЙ БАССЕЙН С ДЖАКУЗИ
+                02. МОЗАИЧНЫЙ БАССЕЙН С ДЖАКУЗИ
               </h1>
 
             </div>
@@ -342,19 +345,19 @@
               <div class="product1">
                 <div class="product1-img" style="background-image: url('images/content/product2-6.jpg');"></div>
               </div>
+             
             </div>
 
             <div class="product__box">
               <p class="product__text text">
-              Бассейн отделан белоснежной мозаикой и имеет «римский» вход. Конструкция чаши
-              отлита по разработанному проекту одновременно с бетонированием фундамента здания.
-              Оборудование бассейна вместе с переливной емкостью расположено в техническом этаже
-              дома.
-
-
+                Бассейн отделан белоснежной мозаикой и имеет «римский» вход. Конструкция чаши отлита по разработанному
+                проекту одновременно с бетонированием фундамента здания. Оборудование бассейна вместе с переливной
+                емкостью расположено на техническом этаже дома. Переливная схема фильтрации. Дезинфекция выполняется при
+                помощи автоматической станции дозирования и ультразвукового излучателя. Из аттракционов установлены:
+                противоток и «джакузи».
               </p>
               <div class="product__inner">
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Длина
                   </li>
@@ -362,7 +365,7 @@
                     5,5 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Ширина
                   </li>
@@ -370,23 +373,16 @@
                     3,0 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Глубина
                   </li>
                   <li class="product__descr">
-                    1,2 - 1,8 метра
+                    1,2 – 1,8 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Чаша
-                  </li>
-                  <li class="product__descr">
-                    бетон
-                  </li>
-                </ul>
-                <ul class="product__inners text">
+
+                <ul class="product__inners">
                   <li class="product__feature">
                     Отделка
                   </li>
@@ -394,40 +390,10 @@
                     мозаика
                   </li>
                 </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Фильтрация
-                  </li>
-                  <li class="product__descr">
-                    переливная схема
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Фильт
-                  </li>
-                  <li class="product__descr">
-                    песочный 500 мм
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Дезинфекция
+                
 
-                  </li>
-                  <li class="product__descr">
-                   автоматическая станция, ультрафиолет
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Аттракционы
-                  </li>
-                  <li class="product__descr">
-                    противоток, “джакузи”
-                  </li>
-                </ul>
-                <ul class="product__inners text">
+
+                <ul class="product__inners">
                   <li class="product__feature">
                     Сдача объекта
                   </li>
@@ -435,14 +401,13 @@
                     апрель 2016
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
-                    Стоимость работ
-                    по отделке бетонной чаши
-                    и монтажу оборудования
+                    Стоимость работ "под ключ"
+
                   </li>
                   <li class="product__descr">
-                   3 875 000 руб
+                    3 875 000 руб.
                   </li>
                 </ul>
               </div>
@@ -450,44 +415,63 @@
 
 
           </div>
+          <div class="slider-nav__wrapper">
+            <div class="slider-nav">
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product2-1.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product2-2.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product2-3.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product2-4.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product2-5.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product2-6.jpg" alt="">
+                </div>
+              </div>
 
-          <div class="slider-nav">
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product2-1.jpg" alt="">
-              </div>
             </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product2-2.jpg" alt="">
+
+            <button class="slick-arrow slick-prev">
+              <div class="arrow__wrapper">
+                <img class="slider__arrow-prev--static" src="images/icons/arrow__left-static.png" alt="">
+                <img class="slider__arrow-prev--hover" src="images/icons/arrow__left-hover.png" alt="">
               </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product2-3.jpg" alt="">
+            </button>
+            <button class="slick-arrow slick-next">
+              <div class="arrow__wrapper">
+                <img class="slider__arrow-prev--static" src="images/icons/arrow__right-static.png" alt="">
+                <img class="slider__arrow-prev--hover" src="images/icons/arrow__right-hover.png" alt="">
               </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product2-4.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product2-5.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product2-6.jpg" alt="">
-              </div>
-            </div>
+            </button>
 
           </div>
 
-          <div class="global__inner-btn">
+
+          <div class="global__inner-btn product__inner-btn">
             <a class="global__btn-contact main-btn global-btn" href="gallery.html">
-              Смотреть другие проекты
+              Вернуться в галерею
+            </a>
+            <a class="global__btn-contact main-btn global-btn product__btn" href="product03.html">
+              следующий проект
             </a>
           </div>
         </div>
@@ -804,6 +788,7 @@
 
 
     </footer>
+
 
 
     <div class="modal">
