--- a/app/product03.html
+++ b/app/product03.html
@@ -279,6 +279,9 @@
   </header>
 
 
+
+
+
   <div class="wrapper">
     <main class="main">
       <section class="start">
@@ -307,8 +310,7 @@
             </div>
             <div class="start__wrapper">
               <h1 class="start__title">
-                03.
-                БАЗА ОТДЫХА
+                03. СЕМЕЙНЫЙ БАССЕЙН
               </h1>
 
             </div>
@@ -343,23 +345,20 @@
               <div class="product1">
                 <div class="product1-img" style="background-image: url('images/content/product3-6.jpg');"></div>
               </div>
+              <div class="product1">
+                <div class="product1-img" style="background-image: url('images/content/product3-7.jpg');"></div>
+              </div>
             </div>
 
             <div class="product__box">
               <p class="product__text text">
-                Проведен капитальный ремонт помещения сауны. Построены бассейн, открытая душевая,
-                реконструированы финская сауна и комната отдыха. В интерьер введена
-                конструкция деревянного сруба выходящая во влажную зону, в комнату
-                отдыха и в оранжерею, визуально объединяющая эти пространства. Выполнен
-                комплексный дизайн проект и полная реконструкция существующего помещения.
-                Проведены мероприятия по усилению существующих конструкций, чаша для бассейна
-                отлита ж/б, полностью заменены все инженерные сети, Проведен полный цикл
-                строительных и отделочных работ.
-
-
+                Чаша построена в существующем доме, для семейного пользования. Оригинальный дизайн чаши и помещения, в
+                сочетании с баней служит центром притяжения для друзей и их детей. Скиммерная схема фильтрации.
+                Дезинфекция выполняется при помощи автоматической станции дозирования. Из аттракционов установлены:
+                гидромассаж, противоток, подводная подсветка.
               </p>
               <div class="product__inner">
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Длина
                   </li>
@@ -367,7 +366,7 @@
                     4,0 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Ширина
                   </li>
@@ -375,79 +374,41 @@
                     2,5 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Глубина
                   </li>
                   <li class="product__descr">
-                    1,5 метра
+                    1,4 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Чаша
-                  </li>
-                  <li class="product__descr">
-                    бетон
-                  </li>
-                </ul>
-                <ul class="product__inners text">
+
+                <ul class="product__inners">
                   <li class="product__feature">
                     Отделка
                   </li>
                   <li class="product__descr">
-                    плёнка ПВХ
+                    мозаика
                   </li>
                 </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Фильтрация
-                  </li>
-                  <li class="product__descr">
-                    скиммерная схема
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Фильт
-                  </li>
-                  <li class="product__descr">
-                    песочный 400 мм
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Дезинфекция
+                
 
-                  </li>
-                  <li class="product__descr">
-                    автоматическая станция Analit
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Аттракционы
-                  </li>
-                  <li class="product__descr">
-                    противоток, гидромассажная ванна
-                  </li>
-                </ul>
-                <ul class="product__inners text">
+
+                <ul class="product__inners">
                   <li class="product__feature">
                     Сдача объекта
                   </li>
                   <li class="product__descr">
-                    апрель 2002
+                   февраль 2022
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
-                    Стоимость работ
-                    по отделке бетонной чаши
-                    и монтажу оборудования
+                    Стоимость работ "под ключ"
+
                   </li>
                   <li class="product__descr">
-                    2 453 000 руб
+                   1 425 000 руб.
                   </li>
                 </ul>
               </div>
@@ -455,43 +416,68 @@
 
 
           </div>
+          <div class="slider-nav__wrapper">
+            <div class="slider-nav">
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product3-1.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product3-2.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product3-3.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product3-4.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product3-5.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product3-6.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product3-7.jpg" alt="">
+                </div>
+              </div>
+             
+            </div>
 
-          <div class="slider-nav">
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product3-1.jpg" alt="">
+            <button class="slick-arrow slick-prev">
+              <div class="arrow__wrapper">
+                <img class="slider__arrow-prev--static" src="images/icons/arrow__left-static.png" alt="">
+                <img class="slider__arrow-prev--hover" src="images/icons/arrow__left-hover.png" alt="">
               </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product3-2.jpg" alt="">
+            </button>
+            <button class="slick-arrow slick-next">
+              <div class="arrow__wrapper">
+                <img class="slider__arrow-prev--static" src="images/icons/arrow__right-static.png" alt="">
+                <img class="slider__arrow-prev--hover" src="images/icons/arrow__right-hover.png" alt="">
               </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product3-3.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product3-4.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product3-5.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product3-6.jpg" alt="">
-              </div>
-            </div>
+            </button>
+
           </div>
 
-          <div class="global__inner-btn">
+
+          <div class="global__inner-btn product__inner-btn">
             <a class="global__btn-contact main-btn global-btn" href="gallery.html">
-              Смотреть другие проекты
+              Вернуться в галерею
+            </a>
+            <a class="global__btn-contact main-btn global-btn product__btn" href="product04.html">
+              следующий проект
             </a>
           </div>
         </div>
@@ -810,6 +796,7 @@
     </footer>
 
 
+
     <div class="modal">
       <div class="modal__inner">
         <div class="container">
@@ -860,7 +847,6 @@
       </div>
     </div>
 
- 
 
   </div>
 
