--- a/app/product06.html
+++ b/app/product06.html
@@ -281,6 +281,7 @@
 
 
 
+
   <div class="wrapper">
     <main class="main">
       <section class="start">
@@ -309,8 +310,7 @@
             </div>
             <div class="start__wrapper">
               <h1 class="start__title">
-               06.
-              КУПЕЛЬ НА ДАЧЕ
+                06. КУПЕЛЬ НА ДАЧЕ
               </h1>
 
             </div>
@@ -349,31 +349,29 @@
 
             <div class="product__box">
               <p class="product__text text">
-              Уличная купель предназначенная для круглогодичного использования. Железобетонная
-              конструкция чаши встроена в открытую террасу возле дома. Откидывающаяся лестница
-              позволяет закрывать купель легкой пластиковой крышкой, что позволяет воде оставаться
-              всегда идеально чистой.
-
-
+                Уличная купель предназначенная для круглогодичного использования. Железобетонная конструкция чаши
+                встроена в открытую террасу возле дома. Откидывающаяся лестница позволяет закрывать купель легкой
+                пластиковой крышкой, что позволяет воде оставаться всегда идеально чистой. Скиммерная схема фильтрации.
+                Дезинфекция выполняется при помощи автоматического хлоратора.
               </p>
               <div class="product__inner">
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Длина
                   </li>
                   <li class="product__descr">
-                    1,5 метров
+                    1,5 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Ширина
                   </li>
                   <li class="product__descr">
-                   1,5 метра
+                    1,5 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Глубина
                   </li>
@@ -381,15 +379,8 @@
                     2,0 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Чаша
-                  </li>
-                  <li class="product__descr">
-                    бетон
-                  </li>
-                </ul>
-                <ul class="product__inners text">
+
+                <ul class="product__inners">
                   <li class="product__feature">
                     Отделка
                   </li>
@@ -397,40 +388,10 @@
                     плёнка ПВХ
                   </li>
                 </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Фильтрация
-                  </li>
-                  <li class="product__descr">
-                    скиммерная схема
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Фильт
-                  </li>
-                  <li class="product__descr">
-                    песочный 400 мм
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Дезинфекция
+                
 
-                  </li>
-                  <li class="product__descr">
-                   автоматический хлоратор
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Аттракционы
-                  </li>
-                  <li class="product__descr">
-                    противоток, “джакузи”
-                  </li>
-                </ul>
-                <ul class="product__inners text">
+
+                <ul class="product__inners">
                   <li class="product__feature">
                     Сдача объекта
                   </li>
@@ -438,14 +399,13 @@
                     апрель 2014
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
-                    Стоимость работ
-                    по отделке бетонной чаши
-                    и монтажу оборудования
+                    Стоимость работ "под ключ"
+
                   </li>
                   <li class="product__descr">
-                   2 565 000 руб
+                    2 565 000 руб.
                   </li>
                 </ul>
               </div>
@@ -453,44 +413,63 @@
 
 
           </div>
+          <div class="slider-nav__wrapper">
+            <div class="slider-nav">
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product6-1.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product6-2.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product6-3.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product6-4.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product6-5.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product6-6.jpg" alt="">
+                </div>
+              </div>
+              
+            </div>
 
-          <div class="slider-nav">
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product6-1.jpg" alt="">
+            <button class="slick-arrow slick-prev">
+              <div class="arrow__wrapper">
+                <img class="slider__arrow-prev--static" src="images/icons/arrow__left-static.png" alt="">
+                <img class="slider__arrow-prev--hover" src="images/icons/arrow__left-hover.png" alt="">
               </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product6-2.jpg" alt="">
+            </button>
+            <button class="slick-arrow slick-next">
+              <div class="arrow__wrapper">
+                <img class="slider__arrow-prev--static" src="images/icons/arrow__right-static.png" alt="">
+                <img class="slider__arrow-prev--hover" src="images/icons/arrow__right-hover.png" alt="">
               </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product6-3.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product6-4.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product6-5.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product6-6.jpg" alt="">
-              </div>
-            </div>
+            </button>
 
           </div>
 
-          <div class="global__inner-btn">
+
+          <div class="global__inner-btn product__inner-btn">
             <a class="global__btn-contact main-btn global-btn" href="gallery.html">
-              Смотреть другие проекты
+              Вернуться в галерею
+            </a>
+            <a class="global__btn-contact main-btn global-btn product__btn" href="product07.html">
+              следующий проект
             </a>
           </div>
         </div>
@@ -809,6 +788,7 @@
     </footer>
 
 
+
     <div class="modal">
       <div class="modal__inner">
         <div class="container">
@@ -858,15 +838,6 @@
         </div>
       </div>
     </div>
-
-  
-
-
-
-
-
-
-
 
 
   </div>
