--- a/app/product10.html
+++ b/app/product10.html
@@ -281,6 +281,7 @@
 
 
 
+
   <div class="wrapper">
     <main class="main">
       <section class="start">
@@ -309,8 +310,7 @@
             </div>
             <div class="start__wrapper">
               <h1 class="start__title">
-               10.
-               ДЕТСКИЙ БАССЕЙН
+                10. БАССЕЙН ДЛЯ ОБУЧЕНИЯ ПЛАВАНИЮ
               </h1>
 
             </div>
@@ -349,21 +349,21 @@
 
             <div class="product__box">
               <p class="product__text text">
-             Бассейн для обучения плаванию. Расположен в торговом центре, каркас чаши выполнен
-             из металла и отделан пленкой ПВХ. С помощью корректно подобранного оборудования и
-             автоматической станции дозирования поддерживается высокое качество воды.
-
+                Бассейн начального уровня, для детей, расположен в торговом центре. Каркас чаши выполнен из металла и
+                отделан пленкой ПВХ. С помощью корректно подобранного оборудования и автоматической станции дозирования
+                поддерживается высокое качество воды. Скиммерная схема фильтрации. Дезинфекция выполняется при помощи
+                автоматической станции дозирования.
               </p>
               <div class="product__inner">
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Длина
                   </li>
                   <li class="product__descr">
-                   6,0 метров
+                    6,0 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Ширина
                   </li>
@@ -371,23 +371,16 @@
                     3,0 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Глубина
                   </li>
                   <li class="product__descr">
-                    1,0 метр
+                    1,0 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Чаша
-                  </li>
-                  <li class="product__descr">
-                    металл, фанера
-                  </li>
-                </ul>
-                <ul class="product__inners text">
+
+                <ul class="product__inners">
                   <li class="product__feature">
                     Отделка
                   </li>
@@ -395,56 +388,23 @@
                     плёнка ПВХ
                   </li>
                 </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Фильтрация
-                  </li>
-                  <li class="product__descr">
-                    скиммерная схема
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Фильт
-                  </li>
-                  <li class="product__descr">
-                    песочный 2х700 мм
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Дезинфекция
+               
 
-                  </li>
-                  <li class="product__descr">
-                   автоматическая станция дозирования
-                   Cl, Ph-, коагулянт, Альгицид
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Аттракционы
-                  </li>
-                  <li class="product__descr">
-                    противоток, “джакузи”
-                  </li>
-                </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Сдача объекта
                   </li>
                   <li class="product__descr">
-                   октябрь 2019
+                    октябрь 2019
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
-                    Стоимость работ
-                    по отделке бетонной чаши
-                    и монтажу оборудования
+                    Стоимость работ "под ключ"
+
                   </li>
                   <li class="product__descr">
-                  923 000 руб
+                   932 000 руб.
                   </li>
                 </ul>
               </div>
@@ -452,44 +412,63 @@
 
 
           </div>
+          <div class="slider-nav__wrapper">
+            <div class="slider-nav">
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product10-1.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product10-2.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product10-3.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product10-4.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product10-5.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product10-6.jpg" alt="">
+                </div>
+              </div>
+              
+            </div>
 
-          <div class="slider-nav">
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product10-1.jpg" alt="">
+            <button class="slick-arrow slick-prev">
+              <div class="arrow__wrapper">
+                <img class="slider__arrow-prev--static" src="images/icons/arrow__left-static.png" alt="">
+                <img class="slider__arrow-prev--hover" src="images/icons/arrow__left-hover.png" alt="">
               </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product10-2.jpg" alt="">
+            </button>
+            <button class="slick-arrow slick-next">
+              <div class="arrow__wrapper">
+                <img class="slider__arrow-prev--static" src="images/icons/arrow__right-static.png" alt="">
+                <img class="slider__arrow-prev--hover" src="images/icons/arrow__right-hover.png" alt="">
               </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product10-3.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product10-4.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product10-5.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product10-6.jpg" alt="">
-              </div>
-            </div>
+            </button>
 
           </div>
 
-          <div class="global__inner-btn">
+
+          <div class="global__inner-btn product__inner-btn">
             <a class="global__btn-contact main-btn global-btn" href="gallery.html">
-              Смотреть другие проекты
+              Вернуться в галерею
+            </a>
+            <a class="global__btn-contact main-btn global-btn product__btn" href="product11.html">
+              следующий проект
             </a>
           </div>
         </div>
@@ -557,7 +536,6 @@
 
 
     </main>
-
 
     <footer class="footer">
       <div class="container">
@@ -809,6 +787,7 @@
     </footer>
 
 
+
     <div class="modal">
       <div class="modal__inner">
         <div class="container">
@@ -858,9 +837,6 @@
         </div>
       </div>
     </div>
-
-
-
 
 
   </div>
