--- a/app/product13.html
+++ b/app/product13.html
@@ -310,8 +310,7 @@
             </div>
             <div class="start__wrapper">
               <h1 class="start__title">
-                13.
-                ПЛЁНОЧНЫЙ БАССЕЙН
+                13. БАННЫЙ КОМПЛЕКС С БАССЕЙНОМ В КОТТЕДЖЕ
               </h1>
 
             </div>
@@ -346,110 +345,67 @@
               <div class="product1">
                 <div class="product1-img" style="background-image: url('images/content/product13-6.jpg');"></div>
               </div>
-              <div class="product1">
-                <div class="product1-img" style="background-image: url('images/content/product13-7.jpg');"></div>
-              </div>
-              <div class="product1">
-                <div class="product1-img" style="background-image: url('images/content/product13-8.jpg');"></div>
-              </div>
             </div>
 
             <div class="product__box">
               <p class="product__text text">
-                Для восстановления герметичности чаши было принято решение облицевать ее пленкой
-                ПВХ. После проведенного ремонта бассейн продолжает радовать своих хозяев и служить
-                местом проведения притяжения и проведения тренировок по плаванию.
-              </p>
+                Бассейн имеет переменную глубину. Бетонная чаша бассейна отделана пленкой ПВХ, вокруг построена
+                деревянная терраса. Оборудование расположено в техническом помещении выше уровня воды. Чаша выполнена из
+                бетона. Скиммерная схема фильтрации. Дезинфекция выполняется при помощи автоматической станции
+                дозирования. Из аттракционов установлены: противоток, «джакузи».
+              </p> 
               <div class="product__inner">
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Длина
                   </li>
                   <li class="product__descr">
-                    13,6 метра
+                    10,0 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Ширина
                   </li>
                   <li class="product__descr">
-                    3,6 метра
+                    5,0 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Глубина
                   </li>
                   <li class="product__descr">
-                    1,2 - 2,0 метра
+                    1,3 – 2,0 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Чаша
-                  </li>
-                  <li class="product__descr">
-                    бетон
-                  </li>
-                </ul>
-                <ul class="product__inners text">
+
+                <ul class="product__inners">
                   <li class="product__feature">
                     Отделка
                   </li>
                   <li class="product__descr">
-                    плёнка
+                   плёнка ПВХ
                   </li>
                 </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Фильтрация
-                  </li>
-                  <li class="product__descr">
-                    скиммерная схема
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Фильт
-                  </li>
-                  <li class="product__descr">
-                    отсутствует
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Дезинфекция
+               
 
-                  </li>
-                  <li class="product__descr">
-                    отсутствует
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Аттракционы
-                  </li>
-                  <li class="product__descr">
-                    подводная подсветка
-                  </li>
-                </ul>
-                <ul class="product__inners text">
+
+                <ul class="product__inners">
                   <li class="product__feature">
                     Сдача объекта
                   </li>
                   <li class="product__descr">
-                    август 2020
+                    апрель 2015
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
-                    Стоимость работ
-                    по отделке бетонной чаши
-                    и монтажу оборудования
+                    Стоимость работ "под ключ"
+
                   </li>
                   <li class="product__descr">
-                    844 000 руб
+                    2 565 000 руб.
                   </li>
                 </ul>
               </div>
@@ -457,54 +413,63 @@
 
 
           </div>
+          <div class="slider-nav__wrapper">
+            <div class="slider-nav">
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product13-1.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product13-2.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product13-3.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product13-4.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product13-5.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product13-6.jpg" alt="">
+                </div>
+              </div>
+             
+            </div>
 
-          <div class="slider-nav">
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product13-1.jpg" alt="">
+            <button class="slick-arrow slick-prev">
+              <div class="arrow__wrapper">
+                <img class="slider__arrow-prev--static" src="images/icons/arrow__left-static.png" alt="">
+                <img class="slider__arrow-prev--hover" src="images/icons/arrow__left-hover.png" alt="">
               </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product13-2.jpg" alt="">
+            </button>
+            <button class="slick-arrow slick-next">
+              <div class="arrow__wrapper">
+                <img class="slider__arrow-prev--static" src="images/icons/arrow__right-static.png" alt="">
+                <img class="slider__arrow-prev--hover" src="images/icons/arrow__right-hover.png" alt="">
               </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product13-3.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product13-4.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product13-5.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product13-6.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product13-7.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product13-8.jpg" alt="">
-              </div>
-            </div>
+            </button>
 
           </div>
 
-          <div class="global__inner-btn">
+
+          <div class="global__inner-btn product__inner-btn">
             <a class="global__btn-contact main-btn global-btn" href="gallery.html">
-              Смотреть другие проекты
+              Вернуться в галерею
+            </a>
+            <a class="global__btn-contact main-btn global-btn product__btn" href="product14.html">
+              следующий проект
             </a>
           </div>
         </div>
@@ -873,16 +838,6 @@
         </div>
       </div>
     </div>
-
-
-
-
-
-
-
-
-
-
 
 
   </div>
