--- a/app/pvc.html
+++ b/app/pvc.html
@@ -336,11 +336,12 @@
                 1. Подготовка поверхности
               </h3>
               <div class="stages__item__text text">
-                Для данного вида отделки подходят несколько типов чаш: бетонная, металлический кессон или
-                любой жесткий каркас. Поверхность чаши перед отделкой пленкой ПВХ должна иметь ровную,
-                плотную поверхность, для этого бетон оштукатуривают, прочие поверхности выравнивают.
-                Гидроизоляция в чаше нужна только от наружного воздействия. Для повышения теплоизоляции,
-                снаружи чаша утепляется
+                Для данного вида отделки подходят несколько типов чаш: 
+                 <a class="questions__item-link" href="concrete.html">бетонная</a>, металлический кессон
+                 или любой жесткий
+                каркас. Поверхность чаши перед отделкой пленкой ПВХ должна иметь ровную, плотную поверхность, для этого
+                бетон оштукатуривают, прочие поверхности выравнивают. Гидроизоляция в чаше нужна только от наружного
+                воздействия. Для повышения теплоизоляции, снаружи чаша утепляется.
               </div>
             </div>
             <div class="stages__item">
@@ -348,24 +349,23 @@
                 2. УСТАНОВКА ЗАКЛАДНЫХ ЭЛЕМЕНТОВ
               </h3>
               <div class="stages__item__text text">
-                В заранее оставленные ниши или изготовленные отверстия, крепятся или заливаются цементным
-                раствором, если чаша бетонная, закладные. Установить закладные элементы бассейна
-                необходимо в плоскость внутренних стен бассейна. Трубопровод от закладных и необходимые
-                кабели прокладывают в техническое помещение, к месту установки оборудования
+               В заранее оставленные ниши или изготовленные отверстия, крепятся или заливаются цементным раствором, если
+               чаша бетонная, закладные. Установить закладные элементы необходимо в плоскость внутренних стен бассейна.
+               Трубопровод от закладных и необходимые кабели прокладывают в техническое помещение, к месту установки
+               оборудования.
               </div>
             </div>
 
             <div class="stages__item">
               <h3 class="stages__item-title">
-                3. МОНТАЖ ПЛЕНКИ ПВХ
+               3. МОНТАЖ ПЛЕНКИ ПВХ
               </h3>
               <div class="stages__item__text text">
-                После окончательного выравнивания поверхности, в местах крепления пленки ПВХ,
-                устанавливается крепежная планка или наносится термоклей. Далее на поверхность бассейна
-                приклеивается нетканый материал – подложка под пленку ПВХ. На следующем этапе, с помощью
-                фена, монтируется покрытие бассейна - пленка ПВХ. Затем на край шва наносится специальный
-                герметизирующий состав и на окончательном этапе производится обжатие закладных.
-                Чаша бассейна готова к эксплуатации
+                После окончательного выравнивания поверхности, в местах крепления пленки ПВХ, устанавливается крепежная
+                планка или наносится термоклей. Далее на поверхность бассейна приклеивается нетканый материал – подложка
+                под пленку ПВХ. На следующем этапе, с помощью фена, монтируется покрытие - пленка ПВХ. Затем на край шва
+                наносится специальный герметизирующий состав и на окончательном этапе производится обжатие закладных.
+                Чаша готова к эксплуатации.
               </div>
             </div>
           </div>
@@ -386,8 +386,10 @@
                 БЫСТРЫЙ МОНТАЖ
               </div>
               <p class="benefits__text text">
-                Отсутствие сырых процессов и скорость при монтаже покрытия, значительно сокращает сроки
-                выполнения работ по сравнению с классическими видами отделки
+                Отсутствие сырых процессов и скорость при монтаже покрытия значительно сокращает сроки
+                выполнения работ по сравнению с 
+                <a class="questions__item-link" href="mosaic.html">классическими</a> видами отделки.
+
               </p>
             </div>
 
@@ -398,7 +400,8 @@
               <p class="benefits__text text">
                 Пленка ПВХ в отдельных случаях является практически единственным решением при
                 восстановлении герметичности чаши. Технологичность данного вида отделки позволяет
-                облицевать чашу бассейна почти любой формы
+                облицевать чашу бассейна почти любой формы.
+
               </p>
             </div>
 
@@ -407,8 +410,11 @@
                 СТОИМОСТЬ
               </div>
               <p class="benefits__text text">
-                Отделка бассейна пленкой ПВХ имеет значительно меньшую стоимость работ и материалов по
-                сравнению с отделкой бассейна мозаикой или плиткой
+                Отделка пленкой ПВХ имеет значительно меньшую стоимость работ и материалов по
+                сравнению с отделкой 
+                <a class="questions__item-link" href="mosaic.html">мозаикой</a>
+                 или 
+                 <a class="questions__item-link" href="mosaic.html">плиткой.</a>
               </p>
             </div>
 
@@ -417,13 +423,13 @@
                 НАДЕЖНОСТЬ
               </div>
               <p class="benefits__text text">
-                Сохраняет свои эксплуатационные и гидроизоляционные свойства к перепадам температуры от
-                - 50 0 до +35 0 С и устойчивостью к сгибанию до -25 0 С. Является практически безальтернативным
-                вариантом при строительстве уличных бассейнов в регионах с отрицательными зимними
-                температурами. Высокая износостойкость. Высокая эластичность и сопротивление разрыву
-                позволяет сохранить герметичность бассейна при нарушении целостности чаши. Устойчивость к
-                ультрафиолету. Устойчивость к хлору, но избыточное хлорирование воды в бассейне может
-                вызвать обесцвечивание облицовки
+                Сохраняет свои эксплуатационные и гидроизоляционные свойства при перепадах температуры от
+                - 50 до +35 ℃ и устойчивостью к сгибанию до -25 ℃. Является практически безальтернативным
+                вариантом при 
+                <a class="questions__item-link" href="construction.html">строительстве</a>
+                 уличных бассейнов в регионах с отрицательными зимними
+                температурами.
+
               </p>
             </div>
 
@@ -442,36 +448,34 @@
 
       <section class="projects section">
         <h2 class="projects__title title">
-          галерея работ
+         ГАЛЕРЕЯ РАБОТ
         </h2>
         <p class="projects__text subtitle text">
-          В галерее наших работ Вы можете ознакомиться с проектами, реализованными нашей компанией, каждым из которых мы
-          по праву гордимся.
+         В галерее работ Вы можете ознакомиться с некоторыми проектами, реализованными нашей компанией, каждым из
+         которых мы праву гордимся.
         </p>
 
         <div class="projects__inner">
 
           <div class="projects__wrapper-item">
             <a class="projects__item" href="product04.html"
-              style="background-image: url('images/content/projects__img4.jpg');">
+              style="background-image: url('images/content/product4-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
-                  04. БАННЫЙ КОМПЛЕКС С БАССЕЙНОМ В КОТТЕДЖЕ
+                  04. ПЛЁНОЧНЫЙ БАССЕЙН
                   <p class="projects__more text">
                     Подробнее...
                   </p>
                 </h3>
 
                 <p class="projects__text-more text">
-                  Бассейн имеет переменную глубину. Бетонная чаша бассейна отделана пленкой ПВХ,
-                  вокруг построена деревянная терраса. Оборудование расположено в техническом
-                  помещении выше уровня воды.
+                  Для восстановления герметичности чаши было принято решение облицевать ее пленкой ПВХ...
                 </p>
               </div>
             </a>
 
             <a class="projects__item" href="product05.html"
-              style="background-image: url('images/content/projects__img5.jpg');">
+              style="background-image: url('images/content/product5-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   05. БАССЕЙН В ДЕРЕВЯННОМ ДОМЕ
@@ -480,12 +484,7 @@
                   </p>
                 </h3>
                 <p class="projects__text-more text">
-                  Идеально исполненный бассейн отлично вписывается
-                  в окружающий ландшафт. Ниже ватерлинии чаша отделана пленкой
-                  ПВХ под «светлый мрамор», выше - облицована керамогранитом. Одна
-                  из особенностей данного проекта - удаленное расположение оборудования.
-                  Автоматическая станция дезинфекции и система озонирования поддерживают
-                  в бассейне кристальную чистоту воды.
+                  Идеально исполненный бассейн отлично вписывается в окружающий ландшафт...
                 </p>
               </div>
             </a>
@@ -495,7 +494,7 @@
 
           <div class="projects__wrapper-item">
             <a class="projects__item" href="product07.html"
-              style="background-image: url('images/content/projects__img7.jpg');">
+              style="background-image: url('images/content/product7-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   07. БАССЕЙН НА УЧАСТКЕ
@@ -505,27 +504,23 @@
                 </h3>
 
                 <p class="projects__text-more text">
-                  Уличный бассейн с павильоном. Бассейн построен на загородном участке, сдвижной
-                  павильон из поликарбоната позволяет существенно продлить плавательный сезон.
-                  Автоматическая станция дозирования поддерживает постоянное качество воды. Бассейн
-                  имеет «римский» вход и отделан пленкой ПВХ.
+                  Уличный бассейн с павильоном. Построен на загородном участке, сдвижной павильон из поликарбоната
+                  позволяет...
                 </p>
 
               </div>
             </a>
             <a class="projects__item" href="product13.html"
-              style="background-image: url('images/content/projects__img13.jpg');">
+              style="background-image: url('images/content/product13-1.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
-                  13. ПЛЁНОЧНЫЙ БАССЕЙН
+                  13. БАННЫЙ КОМПЛЕКС С БАССЕЙНОМ В КОТТЕДЖЕ
                   <p class="projects__more text">
                     Подробнее...
                   </p>
                 </h3>
                 <p class="projects__text-more text">
-                  Для восстановления герметичности чаши было принято решение облицевать ее пленкой
-                  ПВХ. После проведенного ремонта бассейн продолжает радовать своих хозяев и служить
-                  местом проведения притяжения и проведения тренировок по плаванию.
+                  Имеет переменную глубину. Бетонная чаша отделана пленкой ПВХ, вокруг построена деревянная терраса...
                 </p>
               </div>
             </a>
@@ -554,7 +549,7 @@
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
-                    Можно ли облицевать пленкой плиточный бассейн?
+                    МОЖНО ЛИ ОБЛИЦЕВАТЬ ПЛЕНКОЙ ПЛИТОЧНЫЙ БАССЕЙН?
                   </p>
                   <div class="questions__item-wrapper">
                     <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -563,10 +558,31 @@
                 </div>
 
                 <p class="questions__item-text text">
-                  Решение зависит от конкретных условий – есть ли отслоение плитки и штукатурки, пригодны ли
-                  закладные установленные в чаше для монтажа пленки, как будет отделан борт чаши
-                  впоследствии и многое другое. В любом случае, для принятия решения потребуется обследования
-                  чаши специалистом.
+                  Все зависит от принятых ранее <a class="questions__item-link"
+                    href="design.html">проектных</a> решений – есть ли отслоение <a class="questions__item-link"
+                      href="mosaic.html">плитки</a> и штукатурки, пригодны
+                  ли
+                  закладные установленные в чаше для монтажа пленки, как будет отделан борт чаши впоследствии и многое
+                  другое. В любом случае для принятия решения потребуется обследования чаши.
+                </p>
+              </div>
+            </div>
+
+            <div class="questions__item global__item-bg">
+              <div class="questions__item-inners">
+                <div class="questions__item-title">
+                  <p class="questions__item-title--text">
+                    МОЖНО ЛИ ПОРВАТЬ ПЛЕНКУ НА БАССЕЙНЕ?
+                  </p>
+                  <div class="questions__item-wrapper">
+                    <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
+                    <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+                  </div>
+                </div>
+                <p class="questions__item-text text">
+                 Пленки для бассейнов выпускаются различной толщины. Для разборных или надувных летних бассейнов
+                 применяются пленки толщиной от 0,25 до 0,55 мм. Для стационарных используются лайнеры толщиной 1,5 мм.
+                 Такое покрытие очень трудно порезать, а порвать просто невозможно.
 
                 </p>
               </div>
@@ -576,7 +592,7 @@
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
-                    Можно ли порвать пленку на бассейне?
+                    КАКИЕ РАСЦВЕТКИ ВОЗМОЖНЫ?
                   </p>
                   <div class="questions__item-wrapper">
                     <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -584,11 +600,9 @@
                   </div>
                 </div>
                 <p class="questions__item-text text">
-                  Пленки для бассейнов выпускаются различной толщины. Для разборных или надувных летних
-                  бассейнов применяются пленки толщиной от 0,25 до 0,55 мм. Для стационарных
-                  используются лайнеры толщиной 1,5 мм. Такое покрытие очень трудно порезать, а порвать
-                  просто невозможно.
-
+                  Современное разнообразие оттенков и имитаций фактур впечатляет, ПВХ мембрана поставляется в различных
+                  цветах, а также может быть стилизованной под мрамор, <a class="questions__item-link"
+                    href="mosaic.html">мозаику</a> или песок.
                 </p>
               </div>
             </div>
@@ -597,7 +611,7 @@
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
-                    Какие расцветки возможны?
+                    КАКОЙ СРОК СЛУЖБЫ?
                   </p>
                   <div class="questions__item-wrapper">
                     <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -605,8 +619,8 @@
                   </div>
                 </div>
                 <p class="questions__item-text text">
-                  Современное разнообразие оттенков и имитаций фактур впечатляет, ПВХ мембрана поставляется
-                  в различных цветах, а также может быть стилизованной под мрамор, мозаику, песок.
+                 Лайнер (пленка ПВХ) служит около 20 лет при его правильном монтаже и эксплуатации. Более стойкий
+                 материал для отделки бассейнов найти трудно.
                 </p>
               </div>
             </div>
@@ -615,28 +629,7 @@
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
-                    Какой срок службы?
-                  </p>
-                  <div class="questions__item-wrapper">
-                    <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
-                    <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
-                  </div>
-                </div>
-                <p class="questions__item-text text">
-                  Лайнер (пленк ПВХ) служит около 20 лет при его правильном монтаже и эксплуатации. Более стойкий
-                  материал
-                  для отделки бассейнов найти трудно.
-
-
-                </p>
-              </div>
-            </div>
-
-            <div class="questions__item global__item-bg">
-              <div class="questions__item-inners">
-                <div class="questions__item-title">
-                  <p class="questions__item-title--text">
-                    Что произойдет с пленкой в зимний период времени на уличном бассейне?
+                    ЧТО ПРОИЗОЙДЕТ С ПЛЕНКОЙ В ЗИМНИЙ ПЕРИОД ВРЕМЕНИ НА УЛИЧНОМ БАССЕЙНЕ?
 
                   </p>
                   <div class="questions__item-wrapper">
@@ -647,8 +640,6 @@
                 <p class="questions__item-text text">
                   При правильной подготовке к зимней консервации, пленочное покрытие вашего бассейна полностью сохранит
                   свои характеристики.
-
-
                 </p>
               </div>
             </div>
