--- a/app/reviews.html
+++ b/app/reviews.html
@@ -311,12 +311,9 @@
               <p class="start__text text">
                 Специалисты компании «Линия Воды» сосредоточены не на выполнении «плана продаж»,
                 <br>
-                а на качестве
-                выполняемых
-                работ. Для нас важно, на каждом этапе выполнить свою работу
+                а на качестве выполняемых работ. Для нас важно на каждом этапе выполнить свою работу
                 <br>
-                наилучшим образом и дать твердую гарантию на
-                результат своих работ.
+                наилучшим образом и дать твердую гарантию на результат своих работ.
               </p>
             </div>
           </div>
