--- a/app/product05.html
+++ b/app/product05.html
@@ -280,6 +280,8 @@
 
 
 
+
+
   <div class="wrapper">
     <main class="main">
       <section class="start">
@@ -308,8 +310,7 @@
             </div>
             <div class="start__wrapper">
               <h1 class="start__title">
-               05.
-              БАССЕЙН В ДЕРЕВЯННОМ ДОМЕ
+                05. БАССЕЙН В ДЕРЕВЯННОМ ДОМЕ
               </h1>
 
             </div>
@@ -348,33 +349,30 @@
 
             <div class="product__box">
               <p class="product__text text">
-              Идеально исполненный бассейн отлично вписывается
-              в окружающий ландшафт. Ниже ватерлинии чаша отделана пленкой
-              ПВХ под «светлый мрамор», выше - облицована керамогранитом. Одна
-              из особенностей данного проекта - удаленное расположение оборудования.
-              Автоматическая станция дезинфекции и система озонирования поддерживают
-              в бассейне кристальную чистоту воды.
-
-
+                Идеально исполненный бассейн отлично вписывается в окружающий ландшафт. Ниже ватерлинии чаша отделана
+                пленкой ПВХ под «светлый мрамор», выше - облицована керамогранитом. Одна из особенностей данного проекта
+                - удаленное расположение оборудования. Автоматическая станция дезинфекции и система озонирования
+                поддерживают в бассейне кристальную чистоту воды. Скиммерная схема фильтрации. Дезинфекция выполняется
+                при помощи озонатора и полуавтоматического хлоратора. Из аттракционов установлены: подводная подсветка.
               </p>
               <div class="product__inner">
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Длина
                   </li>
                   <li class="product__descr">
-                    3,0 метров
+                    3,0 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Ширина
                   </li>
                   <li class="product__descr">
-                   2,5 метра
+                    2,5 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Глубина
                   </li>
@@ -382,56 +380,18 @@
                     2,0 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Чаша
-                  </li>
-                  <li class="product__descr">
-                    бетон
-                  </li>
-                </ul>
-                <ul class="product__inners text">
+
+                <ul class="product__inners">
                   <li class="product__feature">
                     Отделка
                   </li>
                   <li class="product__descr">
-                   плёнка ПВХ
+                    плёнка ПВХ
                   </li>
                 </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Фильтрация
-                  </li>
-                  <li class="product__descr">
-                    скиммерная схема
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Фильт
-                  </li>
-                  <li class="product__descr">
-                    песочный 450 мм
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Дезинфекция
+                
 
-                  </li>
-                  <li class="product__descr">
-                   озонатор, полуавтоматический хлоратор
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Аттракционы
-                  </li>
-                  <li class="product__descr">
-                    декоративный водопад, подводная подсветка
-                  </li>
-                </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Сдача объекта
                   </li>
@@ -439,14 +399,13 @@
                     апрель 2016
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
-                    Стоимость работ
-                    по отделке бетонной чаши
-                    и монтажу оборудования
+                    Стоимость работ "под ключ"
+
                   </li>
                   <li class="product__descr">
-                   1 874 000 руб
+                    1 874 000 руб.
                   </li>
                 </ul>
               </div>
@@ -454,44 +413,63 @@
 
 
           </div>
+          <div class="slider-nav__wrapper">
+            <div class="slider-nav">
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product5-1.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product5-2.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product5-3.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product5-4.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product5-5.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product5-6.jpg" alt="">
+                </div>
+              </div>
+              
+            </div>
 
-          <div class="slider-nav">
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product5-1.jpg" alt="">
+            <button class="slick-arrow slick-prev">
+              <div class="arrow__wrapper">
+                <img class="slider__arrow-prev--static" src="images/icons/arrow__left-static.png" alt="">
+                <img class="slider__arrow-prev--hover" src="images/icons/arrow__left-hover.png" alt="">
               </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product5-2.jpg" alt="">
+            </button>
+            <button class="slick-arrow slick-next">
+              <div class="arrow__wrapper">
+                <img class="slider__arrow-prev--static" src="images/icons/arrow__right-static.png" alt="">
+                <img class="slider__arrow-prev--hover" src="images/icons/arrow__right-hover.png" alt="">
               </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product5-3.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product5-4.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product5-5.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product5-6.jpg" alt="">
-              </div>
-            </div>
+            </button>
 
           </div>
 
-          <div class="global__inner-btn">
+
+          <div class="global__inner-btn product__inner-btn">
             <a class="global__btn-contact main-btn global-btn" href="gallery.html">
-              Смотреть другие проекты
+              Вернуться в галерею
+            </a>
+            <a class="global__btn-contact main-btn global-btn product__btn" href="product06.html">
+              следующий проект
             </a>
           </div>
         </div>
@@ -810,6 +788,7 @@
     </footer>
 
 
+
     <div class="modal">
       <div class="modal__inner">
         <div class="container">
@@ -859,16 +838,6 @@
         </div>
       </div>
     </div>
-
-
-
-
-
-
-
-
-
-
 
 
   </div>
