--- a/app/product07.html
+++ b/app/product07.html
@@ -281,6 +281,7 @@
 
 
 
+
   <div class="wrapper">
     <main class="main">
       <section class="start">
@@ -309,8 +310,7 @@
             </div>
             <div class="start__wrapper">
               <h1 class="start__title">
-               07.
-               БАССЕЙН НА УЧАСТКЕ
+               07. БАССЕЙН НА УЧАСТКЕ
               </h1>
 
             </div>
@@ -349,31 +349,30 @@
 
             <div class="product__box">
               <p class="product__text text">
-              Бассейн отделан белоснежной мозаикой и имеет «римский» вход. Конструкция чаши
-              отлита по разработанному проекту одновременно с бетонированием фундамента здания.
-              Оборудование бассейна вместе с переливной емкостью расположено в техническом этаже
-              дома.
-
-
+                Уличный бассейн с павильоном. Бассейн построен на загородном участке, сдвижной павильон из поликарбоната
+                позволяет существенно продлить плавательный сезон. Автоматическая станция дозирования поддерживает
+                постоянное качество воды. Бассейн имеет «римский» вход и отделан пленкой ПВХ, чаша выполнена из бетона.
+                Скиммерная схема фильтрации. Дезинфекция выполняется при помощи автоматического станции дозирования. Из
+                аттракционов установлены: подводная подсветка.
               </p>
               <div class="product__inner">
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Длина
                   </li>
                   <li class="product__descr">
-                    5,9 метров
+                    5,9 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Ширина
                   </li>
                   <li class="product__descr">
-                   3,0 метра
+                    3,0 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Глубина
                   </li>
@@ -381,56 +380,19 @@
                     1,6 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Чаша
-                  </li>
-                  <li class="product__descr">
-                    бетон
-                  </li>
-                </ul>
-                <ul class="product__inners text">
+
+                <ul class="product__inners">
                   <li class="product__feature">
                     Отделка
                   </li>
                   <li class="product__descr">
-                   плёнка ПВХ
+                    плёнка ПВХ
                   </li>
                 </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Фильтрация
-                  </li>
-                  <li class="product__descr">
-                   скиммерная схема
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Фильт
-                  </li>
-                  <li class="product__descr">
-                    песочный 500 мм
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Дезинфекция
+               
 
-                  </li>
-                  <li class="product__descr">
-                   автоматическая станция
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Аттракционы
-                  </li>
-                  <li class="product__descr">
-                    подводная подсветка
-                  </li>
-                </ul>
-                <ul class="product__inners text">
+
+                <ul class="product__inners">
                   <li class="product__feature">
                     Сдача объекта
                   </li>
@@ -438,14 +400,13 @@
                     сентябрь 2020
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
-                    Стоимость работ
-                    по отделке бетонной чаши
-                    и монтажу оборудования
+                    Стоимость работ "под ключ"
+
                   </li>
                   <li class="product__descr">
-                   1 389 000 руб
+                    1 389 000 руб.
                   </li>
                 </ul>
               </div>
@@ -453,44 +414,63 @@
 
 
           </div>
+          <div class="slider-nav__wrapper">
+            <div class="slider-nav">
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product7-1.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product7-2.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product7-3.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product7-4.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product7-5.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product7-6.jpg" alt="">
+                </div>
+              </div>
+              
+            </div>
 
-          <div class="slider-nav">
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product7-1.jpg" alt="">
+            <button class="slick-arrow slick-prev">
+              <div class="arrow__wrapper">
+                <img class="slider__arrow-prev--static" src="images/icons/arrow__left-static.png" alt="">
+                <img class="slider__arrow-prev--hover" src="images/icons/arrow__left-hover.png" alt="">
               </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product7-2.jpg" alt="">
+            </button>
+            <button class="slick-arrow slick-next">
+              <div class="arrow__wrapper">
+                <img class="slider__arrow-prev--static" src="images/icons/arrow__right-static.png" alt="">
+                <img class="slider__arrow-prev--hover" src="images/icons/arrow__right-hover.png" alt="">
               </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product7-3.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product7-4.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product7-5.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product7-6.jpg" alt="">
-              </div>
-            </div>
+            </button>
 
           </div>
 
-          <div class="global__inner-btn">
+
+          <div class="global__inner-btn product__inner-btn">
             <a class="global__btn-contact main-btn global-btn" href="gallery.html">
-              Смотреть другие проекты
+              Вернуться в галерею
+            </a>
+            <a class="global__btn-contact main-btn global-btn product__btn" href="product08.html">
+              следующий проект
             </a>
           </div>
         </div>
@@ -809,6 +789,7 @@
     </footer>
 
 
+
     <div class="modal">
       <div class="modal__inner">
         <div class="container">
@@ -858,16 +839,6 @@
         </div>
       </div>
     </div>
-
-
-
-
-
-
-
-
-
-
 
 
   </div>
