--- a/app/product08.html
+++ b/app/product08.html
@@ -310,8 +310,7 @@
             </div>
             <div class="start__wrapper">
               <h1 class="start__title">
-                08.
-                СЕМЕЙНЫЙ БАССЕЙН В ОТДЕЛЬНО СТОЯЩЕМ ЗДАНИИ
+                08. ДОМАШНИЙ БАССЕЙН
               </h1>
 
             </div>
@@ -349,48 +348,49 @@
               <div class="product1">
                 <div class="product1-img" style="background-image: url('images/content/product8-7.jpg');"></div>
               </div>
+              <div class="product1">
+                <div class="product1-img" style="background-image: url('images/content/product8-8.jpg');"></div>
+              </div>
+              <div class="product1">
+                <div class="product1-img" style="background-image: url('images/content/product8-9.jpg');"></div>
+              </div>
             </div>
 
             <div class="product__box">
               <p class="product__text text">
-                Переливной бассейн для активной семьи с мелкой зоной для детей. В чаше расположены
-                две гидромассажные зоны, два водопада и противоток, который позволяет полноценно
-                обучаться и проводить тренировки по плаванию. Отделан мозаикой.
+                Бассейн имеет глубину 1,5 метра. «Римская» лестница, отделанная круглой мозаикой, плавно спускается в
+                воду. Бассейн оборудован автоматической станцией дозирования химреагентов. Подогрев воды организован от
+                газового котла. Чаша выполнена из бетона. Скиммерная схема фильтрации. Дезинфекция выполняется при
+                помощи автоматической станции дозирования. Из аттракционов установлены: гейзер, противоток, водопад и
+                подсветка.
               </p>
               <div class="product__inner">
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Длина
                   </li>
                   <li class="product__descr">
-                    8,0 метров
+                    6,0 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Ширина
                   </li>
                   <li class="product__descr">
-                   4,0 метра
+                    3,5 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Глубина
                   </li>
                   <li class="product__descr">
-                    1,2 - 1,8 метра
+                    1,1 - 1,7 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Чаша
-                  </li>
-                  <li class="product__descr">
-                    бетон
-                  </li>
-                </ul>
-                <ul class="product__inners text">
+
+                <ul class="product__inners">
                   <li class="product__feature">
                     Отделка
                   </li>
@@ -398,55 +398,24 @@
                     мозаика
                   </li>
                 </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Фильтрация
-                  </li>
-                  <li class="product__descr">
-                    скиммерная схема
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Фильт
-                  </li>
-                  <li class="product__descr">
-                    песочный 750 мм
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Дезинфекция
+                
 
-                  </li>
-                  <li class="product__descr">
-                    ультразвуковой излучатель
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Аттракционы
-                  </li>
-                  <li class="product__descr">
-                    противоток, гидромассаж, подводная подсветка
-                  </li>
-                </ul>
-                <ul class="product__inners text">
+
+                <ul class="product__inners">
                   <li class="product__feature">
                     Сдача объекта
                   </li>
                   <li class="product__descr">
-                    февраль 2022
+                    май 2019
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
-                    Стоимость работ
-                    по отделке бетонной чаши
-                    и монтажу оборудования
+                    Стоимость работ "под ключ"
+
                   </li>
                   <li class="product__descr">
-                    6 392 000 руб
+                    1 149 000 руб.
                   </li>
                 </ul>
               </div>
@@ -454,49 +423,80 @@
 
 
           </div>
+          <div class="slider-nav__wrapper">
+            <div class="slider-nav">
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product8-1.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product8-2.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product8-3.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product8-4.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product8-5.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product8-6.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product8-7.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product8-8.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product8-9.jpg" alt="">
+                </div>
+              </div>
 
-          <div class="slider-nav">
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product8-1.jpg" alt="">
-              </div>
+
+
             </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product8-2.jpg" alt="">
+
+            <button class="slick-arrow slick-prev">
+              <div class="arrow__wrapper">
+                <img class="slider__arrow-prev--static" src="images/icons/arrow__left-static.png" alt="">
+                <img class="slider__arrow-prev--hover" src="images/icons/arrow__left-hover.png" alt="">
               </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product8-3.jpg" alt="">
+            </button>
+            <button class="slick-arrow slick-next">
+              <div class="arrow__wrapper">
+                <img class="slider__arrow-prev--static" src="images/icons/arrow__right-static.png" alt="">
+                <img class="slider__arrow-prev--hover" src="images/icons/arrow__right-hover.png" alt="">
               </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product8-4.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product8-5.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product8-6.jpg" alt="">
-              </div>
-            </div>
-             <div class="product2">
-               <div class="product2-wrapper">
-                 <img class="product2-img" src="images/content/product8-7.jpg" alt="">
-               </div>
-             </div>
+            </button>
 
           </div>
 
-          <div class="global__inner-btn">
+
+          <div class="global__inner-btn product__inner-btn">
             <a class="global__btn-contact main-btn global-btn" href="gallery.html">
-              Смотреть другие проекты
+              Вернуться в галерею
+            </a>
+            <a class="global__btn-contact main-btn global-btn product__btn" href="product09.html">
+              следующий проект
             </a>
           </div>
         </div>
@@ -564,7 +564,6 @@
 
 
     </main>
-
 
     <footer class="footer">
       <div class="container">
@@ -816,6 +815,7 @@
     </footer>
 
 
+
     <div class="modal">
       <div class="modal__inner">
         <div class="container">
@@ -865,8 +865,6 @@
         </div>
       </div>
     </div>
-
-
 
 
   </div>
