--- a/app/product09.html
+++ b/app/product09.html
@@ -280,6 +280,8 @@
 
 
 
+
+
   <div class="wrapper">
     <main class="main">
       <section class="start">
@@ -308,8 +310,7 @@
             </div>
             <div class="start__wrapper">
               <h1 class="start__title">
-               09.
-               БАССЕЙН В БАННОМ КОМПЛЕКСЕ
+                09. БАССЕЙН В БАННОМ КОМПЛЕКСЕ
               </h1>
 
             </div>
@@ -348,23 +349,24 @@
 
             <div class="product__box">
               <p class="product__text text">
-              Бассейн расположен в отдельно стоящем банном комплексе. В чаше смонтирован
-              противоток и гидромассажная «пушка». Бассейн спроектирован с переменной глубиной
-              чаши для безопасного пребывания детей. Управление аттракционами выполнено с
-              помощью влагозащищенных пьезокнопок вынесенных в чашу. На обходной
-              дорожке расположен регулятор температуры воды и управление насосной установкой, что
-              сводит к минимуму необходимость пребывания в техпомещении.
+                Бассейн расположен в отдельно стоящем банном комплексе. В чаше смонтирован противоток и гидромассажная
+                «пушка». Бассейн спроектирован с переменной глубиной чаши для безопасного пребывания детей. Управление
+                аттракционами выполнено с помощью влагозащищенных пьезокнопок вынесенных в чашу. На обходной дорожке
+                расположен регулятор температуры воды и управление насосной установкой, что сводит к минимуму
+                необходимость пребывания в техпомещении. Чаша выполнена из бетона. Скиммерная схема фильтрации.
+                Дезинфекция выполняется при помощи ультразвукового излучателя. Из аттракционов установлены: противоток,
+                гидромассаж и подсветка.
               </p>
               <div class="product__inner">
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Длина
                   </li>
                   <li class="product__descr">
-                   8,0 метров
+                    8,0 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Ширина
                   </li>
@@ -372,23 +374,16 @@
                     4,0 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
                     Глубина
                   </li>
                   <li class="product__descr">
-                    1,2 - 1,8 метра
+                    1,2 – 1,8 метра
                   </li>
                 </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Чаша
-                  </li>
-                  <li class="product__descr">
-                    бетон
-                  </li>
-                </ul>
-                <ul class="product__inners text">
+
+                <ul class="product__inners">
                   <li class="product__feature">
                     Отделка
                   </li>
@@ -396,55 +391,24 @@
                     мозаика
                   </li>
                 </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Фильтрация
-                  </li>
-                  <li class="product__descr">
-                  скиммерная схема
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Фильт
-                  </li>
-                  <li class="product__descr">
-                   песочный 750 мм
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Дезинфекция
+                
 
-                  </li>
-                  <li class="product__descr">
-                   ультразвуковой излучатель
-                  </li>
-                </ul>
-                <ul class="product__inners text">
-                  <li class="product__feature">
-                    Аттракционы
-                  </li>
-                  <li class="product__descr">
-                  противоток, гидромассаж, подводная подсветка
-                  </li>
-                </ul>
-                <ul class="product__inners text">
+
+                <ul class="product__inners">
                   <li class="product__feature">
                     Сдача объекта
                   </li>
                   <li class="product__descr">
-                   февраль 2022
+                    февраль 2022
                   </li>
                 </ul>
-                <ul class="product__inners text">
+                <ul class="product__inners">
                   <li class="product__feature">
-                    Стоимость работ
-                    по отделке бетонной чаши
-                    и монтажу оборудования
+                    Стоимость работ "под ключ"
+
                   </li>
                   <li class="product__descr">
-                   6 392 000 руб
+                    6 392 000 руб.
                   </li>
                 </ul>
               </div>
@@ -452,44 +416,64 @@
 
 
           </div>
+          <div class="slider-nav__wrapper">
+            <div class="slider-nav">
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product9-1.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product9-2.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product9-3.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product9-4.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product9-5.jpg" alt="">
+                </div>
+              </div>
+              <div class="product2">
+                <div class="product2-wrapper">
+                  <img class="product2-img" src="images/content/product9-6.jpg" alt="">
+                </div>
+              </div>
+             
 
-          <div class="slider-nav">
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product9-1.jpg" alt="">
-              </div>
             </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product9-2.jpg" alt="">
+
+            <button class="slick-arrow slick-prev">
+              <div class="arrow__wrapper">
+                <img class="slider__arrow-prev--static" src="images/icons/arrow__left-static.png" alt="">
+                <img class="slider__arrow-prev--hover" src="images/icons/arrow__left-hover.png" alt="">
               </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product9-3.jpg" alt="">
+            </button>
+            <button class="slick-arrow slick-next">
+              <div class="arrow__wrapper">
+                <img class="slider__arrow-prev--static" src="images/icons/arrow__right-static.png" alt="">
+                <img class="slider__arrow-prev--hover" src="images/icons/arrow__right-hover.png" alt="">
               </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product9-4.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product9-5.jpg" alt="">
-              </div>
-            </div>
-            <div class="product2">
-              <div class="product2-wrapper">
-                <img class="product2-img" src="images/content/product9-6.jpg" alt="">
-              </div>
-            </div>
+            </button>
 
           </div>
 
-          <div class="global__inner-btn">
+
+          <div class="global__inner-btn product__inner-btn">
             <a class="global__btn-contact main-btn global-btn" href="gallery.html">
-              Смотреть другие проекты
+              Вернуться в галерею
+            </a>
+            <a class="global__btn-contact main-btn global-btn product__btn" href="product10.html">
+              следующий проект
             </a>
           </div>
         </div>
@@ -808,6 +792,7 @@
     </footer>
 
 
+
     <div class="modal">
       <div class="modal__inner">
         <div class="container">
@@ -857,16 +842,6 @@
         </div>
       </div>
     </div>
-
-
-
-
-
-
-
-
-
-
 
 
   </div>
